--- a/_posts/2013-04-02-currying.md
+++ b/_posts/2013-04-02-currying.md
@@ -1,3 +1,9 @@
+---
+layout: default
+title: 谈谈 Currying
+---
+
+
 很多基于 lambda calculus 的程序语言，比如 ML 和 Haskell，都习惯用一种叫做 currying 的手法来表示函数。比如，如果你在 Haskell 里面这样写一个函数：
 
     f x y = x + y
