--- a/_posts/2013-04-02-currying.md
+++ b/_posts/2013-04-02-currying.md
@@ -35,27 +35,27 @@ title: 谈谈 Currying
 
 > “f 本来是一个需要两个参数的函数。我们只给了它第一个参数 2。我们想要把 [1, 2, 3] 这个链表里的每一个元素，放进 f 的第二个参数 y，然后把 f 返回的结果一个一个的放进返回值的链表里。”
 
-仔细看看上面这段话说了什么吧，再来看看 (f 2) 是否表达了同样的意思？注意，我们现在的“重点”在于你，一个人，而不在于计算机。你仔细想，不要让思维的定势来影响你的判断。
+仔细看看上面这段话说了什么吧，再来看看 `(f 2)` 是否表达了同样的意思？注意，我们现在的“重点”在于你，一个人，而不在于计算机。你仔细想，不要让思维的定势来影响你的判断。
 
-你发现了吗？(f 2) 并不完全的含有 \y->f 2 y 所表达的内容。因为单从 (f 2) 这个表达式（不看它的定义），你看不到“f 总共需要几个参数”这一信息，你也看不到 (f 2) 会返回什么东西。f 有可能需要2个参数，也有可能需要3个，4个，5个…… 比如，如果它需要3个参数的话，map (f 2) [1, 2, 3] 就不会返回一个整数的链表，而会返回一个函数的链表，它看起来是这样：[(\z->f 2 1 z), (\z->f 2 2 z), (\z->f 2 3 z)]。这三个函数分别还需要一个参数，才会输出结果。
+你发现了吗？`(f 2)` 并不完全的含有 `\y->f 2 y` 所表达的内容。因为单从 `(f 2)` 这个表达式（不看它的定义），你看不到“f 总共需要几个参数”这一信息，你也看不到 (f 2) 会返回什么东西。f 有可能需要2个参数，也有可能需要3个，4个，5个…… 比如，如果它需要3个参数的话，`map (f 2) [1, 2, 3]` 就不会返回一个整数的链表，而会返回一个函数的链表，它看起来是这样：`[(\z->f 2 1 z), (\z->f 2 2 z), (\z->f 2 3 z)]`。这三个函数分别还需要一个参数，才会输出结果。
 
-这样一来，表达式 (f 2) 含有的对“人”有用的信息，就比较少了。你不能很可靠地知道这个函数接受了一个参数之后会变成什么样子。当然，你可以去看 f 的定义，然后再回来，但是这里有一种“直觉”上的开销。如果你不能同时看见这些信息，你的脑子就需要多转一道弯，你就会缺少一些重要的直觉。这种直觉能帮助你写出更好的程序。
+这样一来，表达式 `(f 2)` 含有的对“人”有用的信息，就比较少了。你不能很可靠地知道这个函数接受了一个参数之后会变成什么样子。当然，你可以去看 `f` 的定义，然后再回来，但是这里有一种“直觉”上的开销。如果你不能同时看见这些信息，你的脑子就需要多转一道弯，你就会缺少一些重要的直觉。这种直觉能帮助你写出更好的程序。
 
 然而，currying 的问题不止在于这种“认知”的方面，有时候使用 curry 会直接带来代码复杂性的增加。比如，如果你的 f 定义不是加法，而是除法：
 
     f x y = x / y
 
-然后，我们现在需要把链表 [1, 2, 3] 里的每一个数都除以 2。你会怎么做呢？
+然后，我们现在需要把链表 `[1, 2, 3]` 里的每一个数都除以 2。你会怎么做呢？
 
-map (f 2) [1, 2, 3] 肯定不行，因为 2 是除数，而不是被除数。熟悉 Haskell 的人都知道，可以这样做：
+`map (f 2) [1, 2, 3]` 肯定不行，因为 2 是除数，而不是被除数。熟悉 Haskell 的人都知道，可以这样做：
 
     map (flip f 2) [1, 2, 3]
 
-flip 的作用是“交换”两个参数的位置。它可以被定义为：
+`flip` 的作用是“交换”两个参数的位置。它可以被定义为：
 
     flip f x y = f y x
 
-但是，如果 f 有 3 个参数，而我们需要把它的第 2 个参数 map 到一个链表，怎么办呢？比如，如果 f 被定义为：
+但是，如果 f 有 3 个参数，而我们需要把它的第 2 个参数 `map` 到一个链表，怎么办呢？比如，如果 `f` 被定义为：
 
     f x y z = (x - y) / z
 
@@ -67,19 +67,19 @@ flip 的作用是“交换”两个参数的位置。它可以被定义为：
 
     map (\y -> f 1 y 2) [1, 2, 3]
 
-现在比较一下，你仍然觉得之前那段代码很聪明吗？如果你注意观察，就会发现 (flip (f 1) 2) 这个表达式，是多么的晦涩，多么的复杂。
+现在比较一下，你仍然觉得之前那段代码很聪明吗？如果你注意观察，就会发现 `(flip (f 1) 2)` 这个表达式，是多么的晦涩，多么的复杂。
 
-从 (flip (f 1) 2) 里面，你几乎看不到自己想要干什么。而 \y-> f 1 y 2 却很明确的显示出，你想用 1 和 2 填充掉 f 的第一，三号参数，把第二个参数留下来，然后把得到的函数 map 到链表 [1, 2, 3]。仔细看看，是不是这样的？
+从 `(flip (f 1) 2)` 里面，你几乎看不到自己想要干什么。而 `\y-> f 1 y 2` 却很明确的显示出，你想用 1 和 2 填充掉 `f` 的第一，三号参数，把第二个参数留下来，然后把得到的函数 map 到链表 `[1, 2, 3]`。仔细看看，是不是这样的？
 
 所以你花费了挺多的脑力才把那使用 currying 的代码写出来，然后你每次看到它，还需要耗费同样多的脑力，才能明白你当时写它来干嘛。你是不是吃饱了没事干呢？
 
-练习题：如果你还不相信，就请你用 currying 的方法（加上 flip）表达下面这个语句，也就是把 f 的第一个参数 map 到链表 [1, 2, 3]：
+练习题：如果你还不相信，就请你用 currying 的方法（加上 `flip`）表达下面这个语句，也就是把 f 的第一个参数 map 到链表 `[1, 2, 3]`：
 
     map (\y -> f y 1 2) [1, 2, 3]
 
 得到结果之后再跟上面这个语句对比，看谁更加简单？
 
-到现在你也许注意到了，以上的“笨办法”对于我们想要 map 的每一个参数，都是差不多的形式；而使用 currying 的代码，对于每个参数，形式有很大的差别。所以我们的“笨办法”其实才是以不变应万变的良策。
+到现在你也许注意到了，以上的“笨办法”对于我们想要 `map` 的每一个参数，都是差不多的形式；而使用 currying 的代码，对于每个参数，形式有很大的差别。所以我们的“笨办法”其实才是以不变应万变的良策。
 
 才三个参数，currying 就显示出了它的弱点，如果超过三个参数，那就更麻烦了。所以很多人为了写 currying 的函数，特意把参数调整到方便 currying 的顺序。可是程序的设计总是有意想不到的变化。有时候你需要增加一个参数，有时候你又想减少一个参数，有时候你又会有别的用法，导致你需要调整参数的顺序…… 事先安排好的那些参数顺序，很有可能不能满足你后来的需要。即使它能满足你后来的需要，你的函数也会因为 currying 而难以看懂。
 
