--- a/_posts/2013-03-08-on-syntax.md
+++ b/_posts/2013-03-08-on-syntax.md
@@ -18,7 +18,7 @@ title: 谈语法
 
 Lisp （Scheme 的前身）是世界上第二老的程序语言。最老的是 Fortran。Fortran 的程序，最早的时候都是用打孔机打在卡片上的，所以它其实是几乎没有语法可言的。
 
-![Fortran](../../../images/punch-card.jpeg)
+![Fortran](http://www.yinwang.org/images/punch-card.jpeg)
 
 
 显然，这样写程序很痛苦。但是它却比现代的很多语言有一个优点：它没有歧义，没有复杂的 parse 过程。
