--- a/_posts/2013-04-13-google.md
+++ b/_posts/2013-04-13-google.md
@@ -4,7 +4,7 @@ title: Google 到底出了什么问题
 ---
 
 
-有人也许看过我以前对 Google 的评论。虽然它说出了实情，但也带有一些我自己的主观情绪。我不得不承认，在 Google 实习的后面一段时间，我显示出了自己的傲气。但是我显示出来的原因，其实是一种自发的，用于保护自己的反应。Google 的“和谐”气氛，让我的独立人格受到了威胁，并且由于一些人的傲慢特征，让我产生了自然的“以傲制傲”的反应。
+有人也许看过我以前对 Google 的评论。虽然它说出了实情，但也带有一些我自己的主观情绪。我不得不承认，在 Google 实习的后面一段时间，我对某些人显示出了自己的傲气。但是我显示出来的原因，其实是一种自发的，用于保护自己的反应。Google 的“和谐”气氛，让我的独立人格受到了威胁，并且由于一些人的傲慢特征，让我产生了自然的“以傲制傲”的反应。
 
 如果你想从另一个角度看看 Google 的问题，可以参考一下 James Whittaker 的博文 [Why I left Google](http://blogs.msdn.com/b/jw_on_tech/archive/2012/03/13/why-i-left-google.aspx)
 
