--- a/_posts/2013-04-13-google.md
+++ b/_posts/2013-04-13-google.md
@@ -10,11 +10,12 @@ title: Google 到底是什么问题
 
 现在我在一个跟 Google 很不一样的公司工作。我虽然不能说很喜欢这里，但是它却没有 Google 的一些让我匪夷所思的特征。在经过冷静的思考，以及与一些人的讨论之后，我觉得我应该对 Google 做出一个客观的分析，以便帮助大家找到适合自己的工作环境。在 Google 的朋友也许也能从中得到反馈，从而可以对自己的公司进行一些力所能及的改进。
 
-
-### Google 不能代表你
-
-在我上次批评 Google 之后，收到了一位老同学的反馈。他说，他有几个 Google 的朋友看了我的文章很气愤，说我“让他们显得很丑陋”。我觉得很奇怪，因为我根本就不认识这几个人，更不可能批评他们，为什么批评 Google 就会引起“Google 员工”的如此强烈的反应呢？仔细想一下，如果我批评的不是 Google 而是麦当劳，那麦当劳的员工会有如此反应吗？他们恐怕在暗地里叫好还来不及呢。
+在我上次批评 Google 之后，收到了一位老同学的反馈。他说，他有几个 Google 的朋友看了我的文章很气愤，说我“让他们显得很丑陋”。我觉得很奇怪，因为我根本就不认识这几个人，更不可能对他们有什么恶意，为什么批评 Google 就会引起“Google 员工”的如此强烈的反应呢？仔细想一下，如果我批评的不是 Google 而是麦当劳，那麦当劳的员工会有如此反应吗？他们恐怕在暗地里叫好还来不及呢。
 
 显然，Google 的很多员工已经把 Google 等同于了自己，为了 Google 他们可以鞠躬尽瘁。Google 所做的一切，他们都不加判断的接受。Google 设计的所有东西，他们都认为是世界上最先进的技术。他们像是生活在中国的文化大革命时代，像“祖国花园里的花朵”一样天天向上，为 Google 高唱赞歌。Google 的“河蟹力量”，连中国共产党恐怕都自愧不如。
 
-其实有一位曾经在 Google 工作的朋友（名字我为他保密）来信告诉我，我的感觉一点也有没错，因为他当时在 Google 也是同样的感受，独立的人格和思维，在 Google 仿佛趋于消亡。最近跟一个同事谈到这问题，他也告诉我，Google 确实是这样的，因为他的一些朋友进了 Google 之后，就仿佛完全变了一个人，连他都不敢相信这些人曾经是他的朋友。按他的话说，就是被“洗脑”了。
+其实有一位曾经在 Google 工作的朋友（名字我为他保密）来信告诉我，我的感觉一点也没错，因为他当时在 Google 也是同样的感受，独立的人格和思维，在 Google 仿佛趋于消亡。最近跟另一个公司的朋友谈到这问题，他也告诉我，Google 确实是这样的，因为他的一些朋友进了 Google 之后，就仿佛完全变了一个人，连他都不敢相信这些人曾经是他的朋友。按他的话说，就是被“洗脑”了。
+
+也许在技术上，Google 确实做出了很好的东西，但是在“公司文化”上，Google 确实是有很严重的问题的公司。这个问题的来源，貌似谁也无法分析清楚。
+
+最后我再次声明，这只是我对 Google 作为一个公司的评价，跟 Google 的员工个人没有任何关系。你们虽然为这个公司工作，但是我更喜欢把你们作为独立的人看待。
