--- a/_posts/2013-04-13-google.md
+++ b/_posts/2013-04-13-google.md
@@ -8,7 +8,7 @@ title: Google 到底是什么问题
 
 如果你想从另一个角度看看 Google 的问题，可以参考一下 James Whittaker 的博文 [Why I left Google](http://blogs.msdn.com/b/jw_on_tech/archive/2012/03/13/why-i-left-google.aspx)。这个 James 当时是 Google 主管 test 的 director，是我在 Google 的前老板的老板。我从来没跟他仔细说过话，所以我不能对他做出任何评价。这个文章仅供参考。
 
-现在我在一个跟 Google 很不一样的公司工作。我虽然不能说很喜欢这里，但是它却没有 Google 的一些让我匪夷所思的特征。在经过冷静的思考，以及与一些人的讨论之后，我觉得我应该对 Google 做出一个客观的分析，以便帮助大家找到适合自己的工作环境。在 Google 的朋友也许也能从中得到反馈，从而可以对自己的公司进行一些力所能及的改进。
+现在我在一个跟 Google 很不一样的公司工作。我虽然不能说很喜欢这里，但是它却没有 Google 的一些让我匪夷所思的特征。大家说话都直截了当，并不对自己的公司顶礼膜拜。在经过冷静的思考，以及与一些人的讨论之后，我觉得我应该对 Google 做出一个客观的分析，以便帮助大家找到适合自己的工作环境。在 Google 的朋友也许也能从中得到反馈，从而可以对自己的公司进行一些力所能及的改进。
 
 在我上次批评 Google 之后，收到了一位老同学的反馈。他说，他有几个 Google 的朋友看了我的文章很气愤，说我“让他们显得很丑陋”。我觉得很奇怪，因为我根本就不认识这几个人，更不可能对他们有什么恶意，为什么批评 Google 就会引起“Google 员工”的如此强烈的反应呢？仔细想一下，如果我批评的不是 Google 而是麦当劳，那麦当劳的员工会有如此反应吗？他们恐怕在暗地里叫好还来不及呢。
 
