--- a/_posts/2013-04-13-google.md
+++ b/_posts/2013-04-13-google.md
@@ -16,6 +16,6 @@ title: Google 到底是什么问题
 
 其实有一位曾经在 Google 工作的朋友（名字我为他保密）来信告诉我，我的感觉一点也没错，因为他当时在 Google 也是同样的感受，独立的人格和思维，在 Google 仿佛趋于消亡。最近跟另一个公司的朋友谈到这问题，他也告诉我，Google 确实是这样的，因为他的一些朋友进了 Google 之后，就仿佛完全变了一个人，连他都不敢相信这些人曾经是他的朋友。按他的话说，就是被“洗脑”了。
 
-也许在技术上，Google 确实做出了很好的东西，但是在“公司文化”上，Google 确实有很严重的问题。这个问题的来源，貌似谁也无法分析清楚。所以关于这些人是怎么被洗脑的，他开玩笑的说，“肯定是因为那些免费的食物里面有什么特殊的东西 :-)”
+也许在技术上，Google 确实做出了很好的东西，但是在“公司文化”上，Google 确实有很严重的问题：Google 具有过于强烈的同化力量，这种力量使得员工失去自我。这个问题的来源，貌似谁也无法分析清楚。所以关于这些人是怎么被洗脑的，他开玩笑的说，“肯定是因为那些免费的食物里面有什么特殊的东西 :-)”
 
 最后我再次声明，这只是我对 Google 作为一个公司的评价，跟 Google 的员工个人没有任何关系。你们虽然为这个公司工作，但是我更喜欢把你们作为独立的人看待。
