--- a/_posts/2013-04-13-google.md
+++ b/_posts/2013-04-13-google.md
@@ -12,7 +12,7 @@ title: Google 到底是什么问题
 
 在我上次批评 Google 之后，收到了一位老同学的反馈。他说，他有几个 Google 的朋友看了我的文章很气愤，说我“让他们显得很丑陋”。我觉得很奇怪，因为我根本就不认识这几个人，更不可能对他们有什么恶意，为什么批评 Google 就会引起“Google 员工”的如此强烈的反应呢？仔细想一下，如果我批评的不是 Google 而是麦当劳，那麦当劳的员工会有如此反应吗？他们恐怕在暗地里叫好还来不及呢。
 
-显然，Google 的很多员工已经把 Google 等同于了自己，为了 Google 他们可以鞠躬尽瘁。Google 所做的一切，他们都不加判断的接受。Google 设计的所有东西，他们都认为是世界上最先进的技术。他们像是生活在中国的文化大革命时代，像“祖国花园里的花朵”一样天天向上，为 Google 高唱赞歌。Google 的“河蟹力量”，连中国共产党恐怕都自愧不如。
+显然，Google 的很多员工已经把 Google 等同于了自己，所以他们才会对我的评价做出如此反应。Google 是他们的衣食父母，Google 所做的一切，他们都不加判断的接受。Google 设计的所有东西，他们都认为是世界上最先进的技术。他们像是生活在中国的文化大革命时代，像“祖国花园里的花朵”一样天天向上，为 Google 高唱赞歌。Google 的“河蟹力量”，连中国共产党恐怕都自愧不如。
 
 其实有一位曾经在 Google 工作的朋友（名字我为他保密）来信告诉我，我的感觉一点也没错，因为他当时在 Google 也是同样的感受，独立的人格和思维，在 Google 仿佛趋于消亡。最近跟另一个公司的朋友谈到这问题，他也告诉我，Google 确实是这样的，因为他的一些朋友进了 Google 之后，就仿佛完全变了一个人，连他都不敢相信这些人曾经是他的朋友。按他的话说，就是被“洗脑”了。
 
