--- a/_posts/2013-04-13-google.md
+++ b/_posts/2013-04-13-google.md
@@ -14,7 +14,9 @@ title: Google 到底是什么问题
 
 显然，Google 的很多员工已经把 Google 等同于了自己，所以他们才会对我的评价做出如此反应。Google 是他们的衣食父母，Google 所做的一切，他们都不加判断的接受。Google 设计的所有东西，他们都认为是世界上最先进的技术。他们像是生活在中国的文化大革命时代，像“祖国花园里的花朵”一样天天向上，为 Google 高唱赞歌。Google 的“河蟹力量”，连中国共产党恐怕都自愧不如。
 
-其实有一位曾经在 Google 工作的朋友（名字我为他保密）来信告诉我，我的感觉一点也没错，因为他当时在 Google 也是同样的感受，独立的人格和思维，在 Google 仿佛趋于消亡。最近跟另一个公司的朋友谈到这问题，他也告诉我，Google 确实是这样的，因为他的一些朋友进了 Google 之后，就仿佛完全变了一个人，连他都不敢相信这些人曾经是他的朋友。按他的话说，就是被“洗脑”了。
+其实有一位曾经在 Google 工作的朋友（名字我为他保密）来信告诉我，我的感觉一点也没错，因为他当时在 Google 也是同样的感受，独立的人格和思维，在 Google 仿佛趋于消亡。像“Gooler”，“Googley”和“Noogler”之类的词汇，其实代表了这个公司潜移默化的同化力量。我曾经在三藩市见到 Python 的创造者 Guido van Rossum，我很吃惊他居然也开始使用“Googler”这个词。
+
+最近跟另一个公司的朋友谈到这问题，他也告诉我，Google 确实是这样的，因为他的一些朋友进了 Google 之后，就仿佛完全变了一个人，连他都不敢相信这些人曾经是他的朋友。按他的话说，就是被“洗脑”了。
 
 也许在技术上，Google 确实做出了很好的东西，但是在“公司文化”上，Google 确实有很严重的问题：Google 具有过于强烈的同化力量，这种力量使得员工失去自我。这个问题的来源，貌似谁也无法分析清楚。所以关于这些人是怎么被洗脑的，他开玩笑的说，“肯定是因为那些免费的食物里面有什么特殊的东西 :-)”
 
