--- a/_posts/2013-04-13-google.md
+++ b/_posts/2013-04-13-google.md
@@ -18,4 +18,4 @@ title: Google 到底是什么问题
 
 也许在技术上，Google 确实做出了很好的东西，但是在“公司文化”上，Google 确实有很严重的问题：Google 具有过于强烈的同化力量，这种力量使得员工失去自我，完全任由公司的意志所左右。这个问题的源头，貌似谁也没法说清楚。所以关于这些人是怎么被洗脑的，他开玩笑说，“肯定是因为那些免费的食物里面有什么特殊的东西 :-)”
 
-最后我再次声明，这只是我对 Google 作为一个公司的评价，跟 Google 的员工个人没有任何关系。你们虽然为公司工作，但我更喜欢把你们作为独立的人看待。我尊重你们。
+最后我再次声明，这只是我对 Google 作为一个公司的评价，跟 Google 的员工个人没有任何关系。他们虽然为公司工作，但我更愿意把他们作为独立的人看待，而不是作为一个 Googler 看待。当然我在这里发表的观点，也不代表我所在的公司的看法。虽然我为一个公司工作，但是我的思想是独立于任何公司的。
