--- a/_posts/2013-04-14-markdown.md
+++ b/_posts/2013-04-14-markdown.md
@@ -9,13 +9,16 @@ title: Markdown 的一些问题
 
 比如，选择题的格式是这样：
 
-$ Our teacher told us that there ______ no end to learning.
+$ Our teacher told us that there ______ no end to learning. <br>
    A. was    B. is *        C. has            D. had
 
 每道题开头都是一个 $，正确答案后面加一个 *
 
+跟我的语言相比，markdown 真是小巫见大巫了。
 
-有点跑题了。现在回头来看看 markdown 的问题：
+
+有点跑题了。现在回头来看看 markdown 的问题。
+
 
 * Markdown 实际上采用的是类似 Python 和 Haskell 的 layout 语法。
 
@@ -36,5 +39,6 @@ $ Our teacher told us that there ______ no end to learning.
 
 * 表达力相当有限
 
-  在图片的语法上就看得出来，markdown 引入了 `![alt](image url)` 这样格式，却怎么也无法简单的表达需要的内容。比如现在仍然无法表达图片的大小这么重要的信息。所以我觉得 markdown 的语法已经显示出了它的弱点。如果它要表达更复杂的信息，就会变得比 HTML 还要难记，难看。所以对于图片，我觉得还不如直接用 HTML 的 `<img>` 。
+  在有些细节上，markdown 并不能表达我想要的格式。比如它不能正确的插入断行 <br>。如果你有两块紧接在一起的代码，但你不想把它们连在一起…… 于是你就发现自己加入了越来越多的 HTML。
 
+  这在图片的语法上就更加明显，markdown 引入了 `![alt](image url)` 这样繁琐难记的格式，却怎么也无法简单的表达需要的内容。比如现在仍然无法表达图片的大小这么重要的信息。所以我觉得 markdown 的语法已经显示出了它的弱点。如果它要表达更复杂的信息，就会变得比 HTML 还要难记，难看。所以对于图片，我觉得还不如直接用 HTML 的 `<img>` 。
