--- a/_posts/2013-04-14-markdown.md
+++ b/_posts/2013-04-14-markdown.md
@@ -30,7 +30,7 @@ $ Our teacher told us that there ______ no end to learning. <br>
 
   <img src="http://www.yinwang.org/images/markdown-mistake.png" width="90%">
 
-  这里的问题是，代码里的第一行因为缩进不够，被放到了代码块外面。但是为了准确的缩进所耗费的精力，其实比直接打 `<pre>` 这样的 tag 还要多。
+  这里的问题是，代码里的第一行 `helloworld z = let x = 1` 因为缩进不够，被放到了代码块外面。但是为了准确的缩进所耗费的精力，其实比直接打 `<pre>` 这样的 tag 还要多。
 
 
 * 特殊字符需要 escape
