--- a/_posts/2013-04-14-markdown.md
+++ b/_posts/2013-04-14-markdown.md
@@ -35,7 +35,7 @@ $ Our teacher told us that there ______ no end to learning. <br>
 
 * 特殊字符需要 escape
 
-  因为 markdown 使用了很多特殊字符：\*, \[, \], #, ... 这些都需要在文档里被 escape。我多次发现文档段落整段的变成斜体，就是因为原来的文档里出现了 `x*y` 这样的表达式。
+  因为 markdown 使用了很多特殊字符：\*, [, ], #, ... 这些都需要在文档里被 escape。我多次发现文档段落整段的变成斜体，就是因为原来的文档里出现了 `x*y` 这样的表达式。
 
   少量的特殊字符无所谓，但是我觉得 markdown 的特殊字符太多了一点。
 
