--- a/_posts/2013-04-14-markdown.md
+++ b/_posts/2013-04-14-markdown.md
@@ -33,11 +33,10 @@ $ Our teacher told us that there ______ no end to learning. <br>
   这里的问题是，代码里的第一行 `helloworld z = let x = 1` 因为缩进不够，被放到了代码块外面。但是为了准确的缩进所耗费的精力，其实比直接打 `<pre>` 这样的 tag 还要多。
 
 
-* 特殊字符需要 escape
+* 特殊字符的选择不合理
 
-  因为 markdown 使用了很多特殊字符：\*, [, ], #, ... 这些都需要在文档里被 escape。我多次发现文档段落整段的变成斜体，就是因为原来的文档里出现了 `x*y` 这样的表达式。
+  markdown 对特殊字符的使用不大合理。我多次发现文档段落整段的变成斜体，就是因为原来的文档里出现了 `x*y` 这样的表达式。在程序员的世界里，“乘法”显然比“强调”更加频繁。把 \* 用于标记“强调”，实际上把一个非常有用的字符用在了很不频繁的用途。
 
-  少量的特殊字符无所谓，但是我觉得 markdown 的特殊字符太多了一点。
 
 * 表达力相当有限
 
