--- a/_posts/2013-04-14-markdown.md
+++ b/_posts/2013-04-14-markdown.md
@@ -14,10 +14,7 @@ $ Our teacher told us that there ______ no end to learning. <br>
 
 每道题开头都是一个 $，正确答案后面加一个 *
 
-跟我的语言相比，markdown 真是小巫见大巫了。
-
-
-有点跑题了。现在回头来看看 markdown 的问题。
+跟我的语言相比，markdown 真是小巫见大巫了。有点跑题了。现在回头来看看 markdown 的问题。
 
 
 * Markdown 实际上采用的是类似 Python 和 Haskell 的 layout 语法。
