--- a/_posts/2013-04-14-markdown.md
+++ b/_posts/2013-04-14-markdown.md
@@ -39,6 +39,6 @@ $ Our teacher told us that there ______ no end to learning. <br>
 
   在有些细节上，markdown 并不能表达我想要的格式。比如它不能正确的插入断行 `<br>`。如果你有两块紧接在一起的代码，但你不想把它们连在一起…… 于是你就发现自己加入了越来越多的 HTML。
 
-  这在图片的语法上就更加明显，markdown 引入了 `![alt](image url)` 这样繁琐难记的格式，却不能用简单的，一致的格式表达必须的信息。比如现在它仍然无法表达图片的大小，这是相当重要的信息。所以我觉得 markdown 的语法已经显示出了它的弱点，如果它要表达更复杂的信息，就会变得比 HTML 还要难记，难看。所以对于图片，我觉得还不如直接用 HTML 的 `<img>` 。
+  这在图片的语法上就更加明显，markdown 引入了 `![alt](image url)` 这样的格式，其实比起 HTML 还要难看和不一致。比如现在它仍然无法表达图片的大小，这是相当重要的信息。所以我觉得 markdown 的语法已经显示出了它的弱点，如果它要表达更复杂的信息，就会变得比 HTML 还要难记，难看。所以对于图片，我觉得还不如直接用 HTML 的 `<img>` 。
 
-现在就这样先凑合着吧。也许过段时间我自己设计一个格式。
+所以总的感觉是 markdown 引入了太多的“语法”，以至于稍微复杂一点的信息表达起来还不如 HTML 来的直接。现在就这样先凑合着吧。也许过段时间自己设计一个格式。
