--- a/_posts/2013-04-14-markdown.md
+++ b/_posts/2013-04-14-markdown.md
@@ -12,9 +12,9 @@ title: Markdown 的一些问题
     $ Our teacher told us that there ______ no end to learning.
        A. was    B. is *        C. has            D. had
 
-每道题开头都是一个 $，正确答案后面加一个 *
+每道题开头都是一个 $，正确答案后面加一个 *。在处理的时候这些 $ 都会被变成题目编号，而有 `*` 标记的答案选项，会被放到答案表里面。跟我的语言相比，markdown 真是小巫见大巫了。
 
-跟我的语言相比，markdown 真是小巫见大巫了。有点跑题了。现在回头来看看 markdown 的问题。
+有点跑题了。现在回头来看看 markdown 的问题。
 
 
 * Markdown 实际上采用的是类似 Python 和 Haskell 的 layout 语法。
