--- a/_posts/2013-04-14-markdown.md
+++ b/_posts/2013-04-14-markdown.md
@@ -12,9 +12,11 @@ title: Markdown 的一些问题
     $ Our teacher told us that there ______ no end to learning.
        A. was    B. is *        C. has            D. had
 
-每道题开头都是一个 $，正确答案后面加一个 *。在处理的时候这些 $ 都会被变成题目编号，而有 `*` 标记的答案选项，会被放到答案表里面。跟我的语言相比，markdown 真是小巫见大巫了。
+每道题开头都是一个 $，正确答案后面加一个 *。在处理的时候这些 $ 都会被变成题目编号，而有 `*` 标记的答案选项，会被放到答案表里面。
 
-有点跑题了。现在回头来看看 markdown 的问题。
+最有意思的是改错题。因为改错题是一个英语段落，某些行有错，但每行最多只能有一个错。所以我的设计是，在普通的段落里插入这样的记号：`| correct | incorrect |`。其中 `correct` 和 `incorrect` 都可以是空白，用以表示“插入”与“删除”。最后我会根据这些标记的位置把段落排版，让每行上面最多只有一个错。为了让段落的行看起来均匀，我使用了一种类似 TeX 的动态规划断行算法。这里使用 `|` 是因为这个符号不会在普通的英语文章里出现。
+
+现在回想起来，我那时候做出来的东西就已经相当先进了。跟我的语言相比，markdown 真是小巫见大巫了。有点跑题了，还是回头来看看 markdown 的问题吧。
 
 
 * Markdown 实际上采用的是类似 Python 和 Haskell 的 layout 语法。
