--- a/_posts/2013-04-14-markdown.md
+++ b/_posts/2013-04-14-markdown.md
@@ -5,7 +5,7 @@ title: Markdown 的一些问题
 
 把我之前的博文基本上转换成了 markdown 格式。我发现 markdown 虽然在编辑器里看起来比 HTML 清晰一些，但也有一些不足。
 
-这种格式很像我本科的时候给我爸做的一种“标准化试卷标记语言”（因为我爸是中学英语老师）。当时我写了一个1000来行的 Perl 脚本，可以把这种简单的标记语言转换成美观的 LaTeX 格式文档。题目可以包括选择题，填空题，改错题，…… 这种语言的特点是，题目和答案都放在一起。经过处理之后，答案与题目分离，并且被放到答案表里正确的位置上。
+这种格式很像我本科的时候给我爸做的一种“标准化试卷标记语言”（因为我爸是中学英语老师）。当时我写了一个1000来行的 Perl 脚本，可以把这种简单的标记语言转换成美观的 LaTeX 格式文档，并且带有友好的 Tk 图形界面。题目可以包括选择题，填空题，改错题，…… 这种语言的特点是，题目和答案都放在一起。经过处理之后，答案与题目分离，并且被放到答案表里正确的位置上。
 
 比如，选择题的格式是这样：
 
