--- a/_posts/2013-04-14-markdown.md
+++ b/_posts/2013-04-14-markdown.md
@@ -5,7 +5,7 @@ title: Markdown 的一些问题
 
 把我之前的博文基本上转换成了 markdown 格式。我发现 markdown 虽然在编辑器里看起来比 HTML 清晰一些，但也有一些不足。
 
-这种格式很像我本科的时候给我爸做的一种“标准化试卷标记语言”（因为我爸是中学英语老师）。当时我写了一个1000来行的 Perl 脚本，可以把这种简单的标记语言转换成美观的 LaTeX 格式文档，并且带有友好的 Tk 图形界面。题目可以包括选择题，填空题，改错题，…… 这种语言的特点是，题目和答案都放在一起。经过处理之后，答案与题目分离，并且被放到答案表里正确的位置上。
+这些 markup 语言的格式都有点像我本科的时候给我爸做的一种“标准化试卷标记语言”（因为我爸是中学英语老师）。当时我写了一个1000来行的 Perl 脚本，可以把这种简单的标记语言转换成美观的 LaTeX 格式文档，并且带有友好的 Tk 图形界面。题目可以包括选择题，填空题，改错题，…… 这种语言的特点是，题目和答案都放在一起。经过处理之后，答案与题目分离，并且被放到答案表里正确的位置上。
 
 比如，选择题的格式是这样：
 
@@ -16,7 +16,7 @@ title: Markdown 的一些问题
 
 最有意思的是改错题。因为改错题是一个英语段落，某些行有错，但每行最多只能有一个错。所以我的设计是，在普通的段落里插入这样的记号：`| correct | incorrect |`，用以“引入错误”。其中 `correct` 和 `incorrect` 都可以是空白，用以表示“插入”与“删除”。如果两个都不是空白，那就是“修改”。最后我会根据这些标记的位置把段落排版，让每行上面最多只有一个错。为了让段落的行看起来均匀，我使用了一种类似 TeX 的动态规划断行算法。这里使用 `|` 是因为这个符号不会在普通的英语文章里出现。
 
-现在回想起来，我那时候做出来的东西就已经相当先进了。跟我的语言相比，markdown 真是小巫见大巫了。有点跑题了，还是回头来看看 markdown 的问题吧。
+现在回想起来，我那时候的设计就已经相当先进了。怎么就没想过把它做成产品卖给教育部呢 :-p 跟我的语言相比，这些 markup 语言真是小巫见大巫了。有点跑题了，还是回头来看看 markdown 的问题吧。
 
 
 * Markdown 实际上采用的是类似 Python 和 Haskell 的 layout 语法。
