--- a/_posts/2013-04-14-markdown.md
+++ b/_posts/2013-04-14-markdown.md
@@ -16,7 +16,7 @@ title: Markdown 的一些问题
 
 最有意思的是改错题。因为改错题是一个英语段落，某些行有错，但每行最多只能有一个错。所以我的设计是，在普通的段落里插入这样的记号：
 
-    | correct | incorrect |
+    This is | a correct | an incorrect | sentence.
 
 用以“引入错误”。其中 `correct` 和 `incorrect` 都可以是空白，用以表示“插入”与“删除”。如果两个都不是空白，那就是“修改”。最后我会根据这些标记的位置把段落排版，让每行上面最多只有一个错。为了让段落的行看起来均匀，我使用了一种类似 TeX 的动态规划断行算法。这里使用 `|` 是因为这个符号不会在普通的英语文章里出现。
 
