--- a/_posts/2013-04-14-markdown.md
+++ b/_posts/2013-04-14-markdown.md
@@ -18,7 +18,7 @@ title: Markdown 的一些问题
 
     This is | a correct | an incorrect | sentence.
 
-用以“引入错误”。其中 `correct` 和 `incorrect` 都可以是空白，用以表示“插入”与“删除”。如果两个都不是空白，那就是“修改”。最后我会根据这些标记的位置把段落排版，让每行上面最多只有一个错。为了让段落的行看起来均匀，我使用了一种类似 TeX 的动态规划断行算法。这里使用 `|` 是因为这个符号不会在普通的英语文章里出现。
+用以“引入错误”。其中 `a correct` 和 `an incorrect` 都可以是空白，用以表示“插入”与“删除”。如果两个都不是空白，那就是“修改”。最后我会根据这些标记的位置把段落排版，让每行上面最多只有一个错。为了让段落的行看起来均匀，我使用了一种类似 TeX 的动态规划断行算法。这里使用 `|` 是因为这个符号不会在普通的英语文章里出现。
 
 现在回想起来，我那时候的设计就已经相当先进了。怎么就没想过把它做成产品卖给教育部呢，也许因为觉得这种技术会制造出更大量的题海，祸害更多的中学生 :-p 跟我的语言相比，这些 blog 用的 markup 语言真是小巫见大巫了，而且问题多多。有点跑题了，还是回头来看看 markdown 的问题吧。
 
