--- a/_posts/2013-04-14-markdown.md
+++ b/_posts/2013-04-14-markdown.md
@@ -12,7 +12,7 @@ title: Markdown 的一些问题
 
   我已经在一篇[英文博文](http://en.yinwang.org/blog-en/2011/05/08/layout)里提到了 layout 语法的多种问题。因为空格的数量决定了文档的结构，这种文档格式相当的“脆弱”。稍微少打一两个空格，就会出现不可预测的结果。这种现象在“itemize”内部的代码块最容易出现。因为每个 item 带来了缩进，所以内部的代码必须比 item 的缩进多4个空格，才能被排到正确的位置。比如我转换博文的时候多次出现以下的情况：
 
-  <img src="http://www.yinwang.org/images/markdown-mistake.png" width="90%" style="boarder=2px solid green">
+  <img src="http://www.yinwang.org/images/markdown-mistake.png" width="90%" style="border: 2px solid green;">
 
   这里的问题是，代码里的第一行 `helloworld z = let x = 1` 因为缩进不够，被放到了代码块外面。但是为了准确的缩进所耗费的精力，其实比直接打 `<pre>` 这样的 tag 还要多。
 
