--- a/_posts/2013-04-14-markdown.md
+++ b/_posts/2013-04-14-markdown.md
@@ -24,7 +24,7 @@ title: Markdown 的一些问题
 
 * 表达力相当有限
 
-  在有些细节上，markdown 并不能表达我想要的格式。比如它不能正确的插入断行 `<br>`。如果你有两块紧接在一起的代码，但你不想把它们连在一起…… 于是你就发现自己加入了越来越多的 HTML。
+  在很多细节上，markdown 并不能表达我想要的格式。比如它不能正确的插入断行 `<br>`。如果你有两块紧接在一起的代码，但你不想把它们连在一起…… 于是你就发现自己加入了越来越多的 HTML。
 
   这在图片的语法上就更加明显，markdown 引入了 `![alt](image url)` 这样的格式，其实比起 HTML 还要难看和不一致。比如现在它仍然无法表达图片的大小，这是相当重要的信息。所以我觉得 markdown 的语法已经显示出了它的弱点，如果它要表达更复杂的信息，就会变得比 HTML 还要难记，难看。所以对于图片，我觉得还不如直接用 HTML 的 `<img>` 。
 
