--- a/_posts/2013-04-13-google.md
+++ b/_posts/2013-04-13-google.md
@@ -4,9 +4,7 @@ title: Google 到底是什么问题
 ---
 
 
-有人也许看过我以前对 Google 的评论。虽然它说出了实情，但也带有一些我自己的主观情绪。我不得不承认，在 Google 实习的后面一段时间，我对某些人显示出了自己的傲气。但是我显示出来的原因，其实是一种自发的，用于保护自己的反应。Google 的“和谐”气氛，让我的独立人格受到了威胁，并且由于一些人的傲慢特征，让我产生了自然的“以傲制傲”的反应。
-
-如果你想从另一个角度看看 Google 的问题，可以参考一下 James Whittaker 的博文 [Why I left Google](http://blogs.msdn.com/b/jw_on_tech/archive/2012/03/13/why-i-left-google.aspx)。这个 James 当时是 Google 主管 test 的 director，是我在 Google 的前老板的老板。我从来没跟他仔细说过话，所以我不能对他做出任何评价。这个文章仅供参考。
+有人也许看过我以前对 Google 的评论。虽然它说出了实情，但也带有一些我自己的主观情绪。如果你想从另一个角度看看 Google 的问题，可以参考一下 James Whittaker 的博文《[Why I left Google](http://blogs.msdn.com/b/jw_on_tech/archive/2012/03/13/why-i-left-google.aspx)》。这个 James 当时是 Google 主管 test 的 director，是我在 Google 的前老板的老板。我从来没跟他仔细说过话，所以我不能对他做出任何评价。这个文章仅供参考。
 
 现在我在一个跟 Google 很不一样的公司工作。我虽然不能说很喜欢这里，但是它却没有 Google 的一些让我匪夷所思的特征。大家说话都直截了当，并不对自己的公司顶礼膜拜。在经过冷静的思考，以及与一些人的讨论之后，我觉得我应该对 Google 做出一个客观的分析，以便帮助大家找到适合自己的工作环境。在 Google 的朋友也许也能从中得到反馈，从而可以对自己的公司进行一些力所能及的改进。
 
