--- a/_posts/2013-04-13-google.md
+++ b/_posts/2013-04-13-google.md
@@ -16,4 +16,4 @@ title: Google 到底是什么问题
 
 也许在技术上，Google 做出了一些好东西，但是在“公司文化”上，Google 确实有很严重的问题：Google 具有过于强烈的同化力量，这种力量使得员工失去自我，完全任由公司的意志所左右。这个问题的源头，貌似谁也没法说清楚。所以关于这些人是怎么被洗脑的，这位朋友开玩笑说，“肯定是因为那些免费的食物里面有什么特殊的东西 :-)”
 
-最后我再次声明，这只是我对 Google 作为一个公司的评价，跟 Google 的员工个人没有任何关系。他们虽然为公司工作，但我更愿意把他们作为独立的，不带有任何标签的人看待。当然我在这里发表的观点跟我所在的公司没有任何关系。虽然我为一个公司工作，但是我的思想是独立于任何公司的。
+最后我再次声明，这只是我对 Google 作为一个公司的评价，跟 Google 的员工个人没有任何关系。他们虽然为公司工作，但我更愿意把他们作为独立的，不带有任何标签的人看待。当然我在这里发表的观点跟我所在的公司没有任何关系。虽然我为一个公司工作，但是我的思想是独立于任何公司的。我永远也不属于任何公司，也不属于任何其他人。我只属于我自己。
