--- a/_posts/2013-04-13-google.md
+++ b/_posts/2013-04-13-google.md
@@ -14,6 +14,6 @@ title: Google 到底是什么问题
 
 其实有一位曾经在 Google 工作的朋友（名字我为他保密）来信告诉我，我的感觉一点也没错，因为他当时在 Google 也是同样的感受，独立的人格和思维，在 Google 仿佛趋于消亡。最近跟另一个公司的朋友谈到这问题，他也说 Google 确实是这样的。他的一些朋友进了 Google 之后就仿佛完全变了一个人，连他都不敢相信这些人曾经是他的朋友。按他的话说，就是被“洗脑”了。
 
-也许在技术上，Google 做出了一些好东西，但是在“公司文化”上，Google 确实有很严重的问题：Google 具有过于强烈的同化力量，这种力量使得员工失去自我，完全任由公司的意志所左右。这个问题的源头，貌似谁也没法说清楚。所以关于这些人是怎么被洗脑的，这位朋友开玩笑说，“肯定是因为那些免费的食物里面有什么特殊的东西。”
+也许在技术上 Google 做出了一些好东西，但是在“公司文化”上，Google 确实有很严重的问题：Google 具有过于强烈的同化力量，这种力量使得员工失去自我，完全任由公司的意志所左右。这个问题的源头，貌似谁也没法说清楚。所以关于这些人是怎么被洗脑的，这位朋友开玩笑说，“肯定是因为那些免费的食物里面有什么特殊的东西。”
 
 最后我再次声明，这只是我对 Google 作为一个公司的评价，跟 Google 的员工个人没有任何关系。他们虽然为公司工作，但我更愿意把他们作为独立的，不带有任何标签的人看待。当然我在这里发表的观点跟我所在的公司没有任何关系。虽然我为一个公司工作，但是我的思想是独立于任何公司的。我永远不属于任何公司，也不属于任何其他人。我只属于我自己。
