--- a/_posts/2013-04-14-i-we.md
+++ b/_posts/2013-04-14-i-we.md
@@ -14,8 +14,10 @@ title: 论“我”和“我们”
 
 这是一个非常微妙的事情，仔细感觉一下才会明白其中的道理。如果你把上面的“我”换成“我们”，就变成了“我们认为”，“我们不同意”，…… 可是问题就在于：“我们”是谁？说话的人有什么资格代表“我们”说话？在美国的时候，你有时候会感觉到有人使用“我们”这个词，却表达的是“我”的想法。明白我的意思了吗？这其实就是变相的强奸民意。其它人还没表态呢，有人就用了“我们”。这样就使得有些人的声音不被人听到，盲目的顺从这个使用“我们”的人。
 
-另外，使用“我们”这个词，还有“借刀杀人”的嫌疑。有时候某个人想做某件事情，他就说“我们”想这样做。本来如果只靠他一个人的声势，他是不能说服别人的。可是一旦他用了“我们”，对方就会感觉到那是“很多人”的意见，于是就屈服了。其实他们那群人里面意见可不一致呢，如果你挨个问问，每个人想法都不一样的。可是你会听到这样的话：“这就是我们做事的方式。”
+另外，使用“我们”这个词，还有“借刀杀人”的嫌疑。有时候某个人想做某件事情，他就说“我们”想这样做。本来如果只靠他一个人的声势，他是不能说服别人的。可是一旦他用了“我们”，对方就会感觉到那是“很多人”的意见，于是就屈服了。其实他们那群人里面意见可不一致呢，如果你挨个问问，每个人想法都不一样的。可是你经常会听到这样的话：“这就是我们做事的方式。”
 
 把自己的意志强加于人，或者盗窃他人声势的最好办法，也许就是使用“我们”这个词。
 
-相反的，使用“我”这个词，其实往往代表“一家之言”。“我觉得”，“我认为”，“我不同意”，…… 这里面其实包含了对别人的尊重。因为你其实是在说：这是我的看法，不代表任何其他人，他们有同意或者不同意的自由，他们怎么想不关我的事，我并不强求。
+相反的，使用“我”这个词，其实往往代表“一家之言”。“我觉得”，“我认为”，“我不同意”，…… 这里面其实包含了对别人的尊重。因为你其实是在说：这是我的看法，我做事的方式，不代表任何其他人。其他人有同意或者不同意的自由，他们怎么想不关我的事，我并不强求。
+
+所以一个欧洲的同事告诉我，其实欧洲的个人主义，是一件好事。因为你经常会遇到一些很有个性，很有主见，很有趣的人。而不是像美国这样，似乎很少人有自己的看法，总是人云亦云的味道。
