--- a/_posts/2013-04-14-i-we.md
+++ b/_posts/2013-04-14-i-we.md
@@ -8,7 +8,7 @@ title: 论“我”和“我们”
 
 > “相对于欧洲人，美国的个人主义更少…… 许多的重心，放在‘我们’，而不是‘我’…… 所以更加重视习俗和传统。”
 
-这貌似一个褒义的评价，可是我觉得美国的这个喜欢用“我们”的习惯，其实并不像爱因斯坦说的那么好。我们应该尽量用“我”这个词，而不是“我们”。这是为什么呢？
+这貌似一个褒义的评价，可是我觉得美国的这个喜欢用“我们”的习惯，其实并不像爱因斯坦说的那么好。一个人应该尽量用“我”这个词，而不是“我们”。这是为什么呢？
 
 表面上看起来，“我”貌似一个很“自大”的词：“我认为”，“我不同意”，…… 因为它貌似总是在说自己。可是最终你会发现，“我”其实才是最谦卑，最尊重他人的人称代词。
 
