--- a/_posts/2012-09-18-texmacs.md
+++ b/_posts/2012-09-18-texmacs.md
@@ -3,7 +3,7 @@ layout: default
 title: TeXmacs：一个真正“所见即所得”的排版系统
 ---
 
-<img src="http://www.yinwang.org/images/texmacs.png">
+<img src="http://www.yinwang.org/images/texmacs.png" width="95%">
 
 
 好久没有推荐过自己喜欢的软件了，现在推荐一款我在美国做数学作业的私家法宝：TeXmacs。我恐怕不可能跟以前那么有闲心写个长篇的 TeXmacs 说明文档了，不过这东西如此的简单好用，所以基本上不用我写什么文档了。鉴于知道的人很少，不理解它的人很多，这里只是帮它打个广告，吊一下胃口。
