--- a/_posts/2012-09-18-texmacs.md
+++ b/_posts/2012-09-18-texmacs.md
@@ -31,5 +31,5 @@ TeXmacs 的主要特点是：
 
 想要迅速的掌握 TeXmacs 的基本用法，可以参考我绘制的 TeXmacs 思维导图：
 
-<a href="http://www.mindomo.com/view.htm?m=b207992c90c046bdbe4053cbdf88b5d5"><img src="http://www.yinwang.org/images/texmacs-mindmap.png"></a>
+<a href="http://www.mindomo.com/view.htm?m=b207992c90c046bdbe4053cbdf88b5d5"><img src="http://www.yinwang.org/images/texmacs-mindmap.png" width="90%"></a>
 
