--- a/_posts/2012-09-18-texmacs.md
+++ b/_posts/2012-09-18-texmacs.md
@@ -29,7 +29,6 @@ TeXmacs 的主要特点是：
 
 目前由于 TeX 的垄断地位，以及由于 TeXmacs 是法国人做的，这个系统在美国还不是很流行，很多人都没听说过有这种东西存在。学术圈的很多人由于受到某种错误思想的“洗脑”，都不理解这种图形化编辑软件的价值。希望中国人民和法国人民一样后来居上，超越美国。
 
-想要迅速的掌握 TeXmacs 的基本用法，可以参考我绘制的 TeXmacs 思维导图：
+想要迅速的掌握 TeXmacs 的基本用法，可以参考我绘制的 <a href="http://www.mindomo.com/view.htm?m=b207992c90c046bdbe4053cbdf88b5d5">TeXmacs 思维导图</a>：
 
 <a href="http://www.mindomo.com/view.htm?m=b207992c90c046bdbe4053cbdf88b5d5"><img src="http://www.yinwang.org/images/texmacs-mindmap.png" width="90%"></a>
-
