--- a/_posts/2013-03-08-on-syntax.md
+++ b/_posts/2013-03-08-on-syntax.md
@@ -3,6 +3,7 @@ layout: default
 title: 谈语法
 ---
 
+<img src="http://www.yinwang.org/images/lisp_cycles.png">
 
 使用和研究过这么多程序语言之后，我觉得几乎不包含多余功能的语言，只有一个：Scheme。所以我觉得它是学习程序设计最好的入手点和进阶工具。当然 Scheme 也有少数的问题，而且缺少一些我想要的功能，但这些都瑕不掩瑜。在用了很多其它的语言之后，我觉得 Scheme 真的是非常优美的语言。
 
@@ -41,7 +42,7 @@ Lisp （Scheme 的前身）是世界上第二老的程序语言。最老的是 F
 
 这种问题在微积分里面就更加明显。微积分难学，很大部分原因，就是因为微积分的那些传统的运算符，其实不是很好的设计。如果你想了解更好的设计，可以参考一下 Mathematica 的公式设计。试试在 Mathematica 里面输入“单行”的微积分运算（而不使用它传统的“2D语法”）。
 
-其实 Lisp 已经可以轻松地表示这种公式，比如对 `x^2` 进行微分，可以表示成 
+其实 Lisp 已经可以轻松地表示这种公式，比如对 `x^2` 进行微分，可以表示成
 
           (D ‘(^ x 2) ‘x)
 
@@ -61,13 +62,13 @@ Lisp （Scheme 的前身）是世界上第二老的程序语言。最老的是 F
 
 最后，从美学的角度上讲，S表达式是很美观的设计。所有的符号都用括号括起来，这形成一种“流线型”的轮廓。而且由于可以自由的换行排版，你可以轻松地对齐相关的部分。在 Haskell 里，你经常会发现一些很蹩脚，很难看的地方。这是因为中缀表达式的“操作符”，经常不能对在一起。比如，如果你有像这样一个 case 表达式：
 
-    case x 
+    case x
       Short _ -> 1
       VeryLooooooooooooooooooooooooog _ -> 2
 
 为了美观，很多 Haskell 程序员喜欢把那两个箭头对齐。结果就成了这样：
 
-    case x 
+    case x
       Short _                           -> 1
       VeryLooooooooooooooooooooooooog _ -> 2
 
