--- a/_posts/2013-03-08-on-syntax.md
+++ b/_posts/2013-03-08-on-syntax.md
@@ -3,7 +3,7 @@ layout: default
 title: 谈语法
 ---
 
-<img src="http://www.yinwang.org/images/lisp_cycles.png">
+<img src="http://www.yinwang.org/images/lisp_cycles.png" width="95%">
 
 使用和研究过这么多程序语言之后，我觉得几乎不包含多余功能的语言，只有一个：Scheme。所以我觉得它是学习程序设计最好的入手点和进阶工具。当然 Scheme 也有少数的问题，而且缺少一些我想要的功能，但这些都瑕不掩瑜。在用了很多其它的语言之后，我觉得 Scheme 真的是非常优美的语言。
 
