--- a/_posts/2013-04-26-why.md
+++ b/_posts/2013-04-26-why.md
@@ -19,7 +19,7 @@ title: 什么是“为什么”
 
 4. 有一次 Cornell 操作系统考试，出了这么一道题：一条河的两边各有5只猴子要过河。可是河上只有一根绳子，猴子需要攀着绳子过河。如果两只猴子在绳子中间遇上了，就会掉进河里。请你使用 semaphore 写出一个程序可以让这些猴子都可以安全过河。
 
-   我的答案是：让这些猴子挨个去“拿号”，然后被叫到号码的猴子挨个过河。可是没想到这么喜欢排队的美国人，居然觉得我的答案是错的。
+   我的答案是：让这些猴子挨个去“拿号”，然后被叫到号码的猴子挨个过河。可是没想到这么喜欢排队的美国人，居然觉得我的答案是错的，就因为我没用 semaphore。
 
    操作系统的课程和书籍往往有很多类似的“同步”问题。对于这些问题，往往有人给你一个“标准答案”，却从来不告诉你这标准答案是怎么想出来的。谁也不知道如何才能“系统的”（systematically），按部就班的得到这些问题的答案。这些问题的“标准答案”里面往往含有一些“聪明技巧”，貌似天上掉下来的。然而，你却很难相信它们是正确的。证明这些答案的正确性，到现在还是研究性质的问题。所以有时候你绞尽脑汁用 semaphore 这样的东西写出来一个程序，试了好多个例子貌似都是对的，结果最后实际运行的时候，遇到前所未有的数据就出问题。
 
