--- a/_posts/2013-04-26-why.md
+++ b/_posts/2013-04-26-why.md
@@ -23,7 +23,7 @@ title: 什么是“为什么”
 
    操作系统的课程和书籍往往有很多类似的“同步”问题。对于这些问题，往往有人给你一个“标准答案”，却从来不告诉你这标准答案是怎么想出来的。谁也不知道如何才能“系统的”（systematically），按部就班的得到这些问题的答案。这些问题的“标准答案”里面往往含有一些“聪明技巧”，貌似天上掉下来的。然而，你却很难相信它们是正确的。证明这些答案的正确性，到现在还是研究性质的问题。所以有时候你绞尽脑汁用 semaphore 这样的东西写出来一个程序，试了好多个例子貌似都是对的，结果最后实际运行的时候，遇到前所未有的数据就出问题。
 
-   我觉得这里的问题在于，这些操作系统的“原语”（比如 semaphore） 本来是被“发明”出来解决某个“特定”的问题，而并不是本质上“通用”的东西。对于当时要解决的那一个问题，它也许是很有效的。可是接下来它就被滥用了，被用在了设计者没有考虑过的地方。当然，你就遇到各种麻烦的问题，比如“竞争”，“死锁”。
+   我觉得这里的问题在于，这些操作系统的“原语”（比如 semaphore） 本来是被“发明”出来解决某个“特定”的问题，而并不是本质上“通用”的东西。对于当时要解决的那一个问题，它也许是很有效的。可是接下来它就被滥用了，被用在了设计者没有考虑过的地方。当然，你就遇到各种麻烦的问题，比如“竞争”，“死锁”。试图使用你的聪明才智利用它们来解决问题，只不过是一些 workaround 而已，而且用的时候自己心里都在打鼓，不知道到时候会不会出问题。这就是因为你使用了错误的工具。
 
    这就像很多人在 C 程序里写 macro 用来代替“重复的代码”。在某个程序里这个 macro 也许是有效的。可是接下来它就被滥用了。人们看不到，其实被这个 macro “组合”起来的操作，如果被分开来用，会让程序更加直接的达到目的。然而写出了这个 macro 之后，你就开始错误的认为这些被它所压缩在一起的操作是一个“原语”，从而不假思索的开始“重用”它。这个错误跟 semaphore 被到处滥用的现象，其实本质是一样的。
 
