--- a/_posts/2013-04-26-why.md
+++ b/_posts/2013-04-26-why.md
@@ -9,7 +9,7 @@ title: 什么是“为什么”
 我在 Cornell 的时候经常遇到这样的问题，那就是教授们一上课就在黑板上写长篇的“定理证明”，全体同学认认真真在下面抄笔记，就连只有十来个人的小课也是那样。有些写字速度慢的人就不得不带上小型录音机，把教授的课全都录下来，要不就是之后去借别人的笔记来抄。
 
 
-有一次，某 Cornell 知名教授照着讲义，背对学生，在黑板上写了大半节课，写下好几板的证明，证明的是 simply typed lambda calculus （STLC）的 strong normalization 特性（SN）。刚写完就到下课时间了，他回过头来看着我们喘了一口气，说：“Any questions？”没有人啃声，于是他说：“很好！下课！”
+有一次某知名教授照着讲义，背对学生，在黑板上写了大半节课，写下好几板的证明，证明的是 simply typed lambda calculus （STLC）的 strong normalization 特性（SN）。刚写完就到下课时间了，他回过头来看着我们喘了一口气，说：“Any questions？”没有人啃声，于是他说：“很好！下课！”
 
 几天后我问他，你证明了 STLC 有这个特性，然而你却没有告诉我们它“为什么”有这个特性。他神气的看了我一眼：“你不懂吗？”我说：“这个证明我看懂了大部分。可是你没有告诉我它‘为什么’有这个特性。我的意思是，一个东西并不是因为你的证明才具有如此的性质。这性质是它天生就有的，不管你是否能证明它。我想知道的是它为什么有这个性质，以及怎么才能从无到有想出这个证明。”他说：“你问这样的问题有什么意义吗？你需要非常聪明，并且需要经过大量的努力才能想出这样的证明。”
 
