--- a/_posts/2013-04-26-why.md
+++ b/_posts/2013-04-26-why.md
@@ -30,7 +30,8 @@ title: 什么是“为什么”
 
 我觉得这里的问题在于，这些操作系统的“原语”（比如 semaphore） 本来是被“发明”出来解决某个“特定”的问题，而并不是本质上“通用”的东西。对于当时要解决的那一个问题，它也许是很有效的。可是接下来它就被滥用了，被用在了设计者没有考虑过的地方。当然，你就遇到各种麻烦的问题，比如“竞争”，“死锁”。试图使用你的聪明才智利用它们来解决问题，只不过是一些 workaround 而已。其实很多专家级的人物用这些东西的时候心里都在打鼓，不知道到时候会不会出问题。这样的现象，往往意味着你使用了错误的工具。
 
-这就像很多人在 C 程序里写 macro 用来代替“重复的代码”。在某个程序里这个 macro 也许是有效的。可是接下来它就被滥用了。人们看不到，其实被这个 macro “组合”起来的操作，如果被分开来用，会让程序更加直接的达到目的。然而写出了这个 macro 之后，你就开始错误的认为这些被它所压缩在一起的操作是一个“原语”，从而不假思索的开始“重用”它。这个错误跟 semaphore 被到处滥用的现象，其实本质是一样的。
+这就像很多人在 C 程序里写 macro 用来代替“重复的代码”。在某个程序里这个 macro 也许是有效的。可是接下来它就被滥用了。人们看不到，其实被这个 macro “组合”起来的操作，如果被分开来用，会让程序更加直接的达到目的。然而写出了这个 macro 之后，有人就开始错误的认为这些被它所压缩在一起的操作是一个“原语”，从而不假思索的开始“重用”它。这个错误跟 semaphore 被到处滥用的现象本质是一样的。
 
 
 计算机科学里面遇到的很多难题，其实都是来自于同一个错误：使用错误的工具，解决错误的问题。所以遇到任何这些问题，我们都应该多问几个“为什么”。找准了问题的源头，才能得到最有效的解决方案。
+
