--- a/_posts/2013-04-26-why.md
+++ b/_posts/2013-04-26-why.md
@@ -13,10 +13,11 @@ title: 什么是“为什么”
 
 几天后我问他，你证明了 STLC 有这个特性，然而你却没有告诉我们它“为什么”有这个特性。他神气的看了我一眼：“你不懂吗？”我说：“这个证明我看懂了大部分。可是你没有告诉我它‘为什么’有这个特性。我的意思是，一个东西并不是因为你的证明才具有如此的性质。这性质是它天生就有的，不管你是否能证明它。我想知道的是它为什么有这个性质，以及怎么才能从无到有想出这个证明。”他说：“你问这样的问题有什么意义吗？你需要非常聪明，并且需要经过大量的努力才能想出这样的证明。”
 
-
 两年之后，我在 Indiana 上了另外一堂程序语言理论课。教授是我之前的导师 Amr Sabry。他上课从来不带讲义，貌似也没有准备，却每次都能讲清楚问题的关键。
 
 于是有一天他也开始讲 STLC 的 SN 特性。他说，我不想写下这个证明让你们抄，我只告诉你们大概怎么去想。SN 的意思就是程序肯定会“终止”。所有会终止的问题，都会有一个“特征值”会随着程序的运行而减小。你需要做的就是找到 STLC 的“特征值”是什么。接着他就开始在黑板上画一个图……
+
+又过了两年，我发现那位 Cornell 的教授已经不是我的对手。
 
 
 
