--- a/_posts/2013-06-17-work.md
+++ b/_posts/2013-06-17-work.md
@@ -8,13 +8,13 @@ title: 半年来的工作感受
 
 我在一家叫做 Coverity 的公司工作，我住在 San Francisco。Coverity 是一个奇怪的公司，San Francisco 是一个奇怪的城市。
 
-Coverity 制造一种叫做“静态分析”（static analysis）的软件。这种软件可以在不运行程序的情况下，经过对代码的分析，自动的找到程序里面可能出现的问题。这有点像我之前给 Google 做的那个 Python 分析器，只不过针对另外的语言（C，C++ 和 Java 等），能处理代码的规模也大很多。还有就是这么多年了，久经沙场考验了。
+Coverity 制造一种叫做“静态分析”（static analysis）的软件。这种软件可以在不运行程序的情况下，经过对代码的分析，自动的找到程序里面可能出现的问题。这有点像我之前给 Google 做的那个 Python 分析器，只不过针对另外的语言（C，C++ 和 Java 等），分析的侧重点不同，能处理代码的规模也大很多。还有就是这么多年了，久经沙场考验了。
 
 Coverity 具有世界上最先进的一些技术，所以麻雀虽小，却让很多人离不开它。恐怕很少有人知道，这小小的公司的忠实客户，包括了一系列的世界级大拿：美国宇航局, 波音, <a href="http://www.lockheedmartin.com">洛克希德马丁</a>，<a href="http://www.baesystems.com">BAE Systems</a>，雷神（<a href="http://www.raytheon.com">Raytheon</a>），丰田，欧洲原子能中心（CERN）…… 貌似几乎所有对代码质量不敢有丝毫差错的公司，都购买了 Coverity 的产品。最近的火星好奇者号的自动着陆软件，也经过了 Coverity 的静态分析。
 
 我必须承认，Coverity 给了我足够的<a href="http://www.yinwang.org/blog-cn/2013/04/12/inspiration">启发</a>，甚至间接的让我发现了自己之前做的 <a href="http://yinwang0.wordpress.com/2010/09/12/pysonar">Python 静态分析</a>里面存在的一些问题。Coverity 的产品在大规模的代码上面的成功，也让我意识到了自己在 Python 分析器里的一些突发奇想的设计的正确性和价值。如果我现在做一个新的 Python 分析器，它将比原来的精确和高效（也可以推广到其它语言比如 JavaScript）。我也清楚的看到，Coverity 自发研制的一些“不大严谨”的做法，其实比程序语言领域里面一些看似高深的“逻辑”还要“正确”。这些微妙的“提示信息”，让我把多个领域的知识串通了起来。所以我觉得跟这公司还有点臭味相投，加入 Coverity 也是不枉此行的。
 
-然而我也发现在我的 Python 分析器中，其实包含了 Coverity 还没有的技术。Python 的静态分析本来就比 C++ 和 Java 之类的难，然而的实现却异常的简单。这些微妙的技术，貌似很多人都可以说他“会做”，但是他们却很难把它做对。这就像“<a href="http://www.yinwang.org/blog-cn/2012/07/04/dan-friedman">CPS转换</a>”一样，很多人都说他会做，可是真正做对的只有极少数人（我是其中之一）。这些技术源自于我对程序语言本质的理解，源自于 Dan Friedman, Kent Dybvig 和 Amr Sabry 等老师的教诲，也源自于我自己辛勤的实验，实验，再实验…… 在我简短而优雅的代码中，包含了许多人需要花费好几倍时间和代码长度才能达到的目标。所以虽然 Coverity 的工程师们技术实力很强，但在代码的简单程度和对程序语言语义的理解上，还真没有人是我的对手。
+然而我也发现在我的 Python 分析器中，其实包含了 Coverity 还没有的技术。Python 的静态分析本来就比 C++ 和 Java 之类的难，然而我的实现却异常的简单。这些微妙的技术，貌似很多人都可以说他“会做”，但是他们却很难把它做对。这就像“<a href="http://www.yinwang.org/blog-cn/2012/07/04/dan-friedman">CPS转换</a>”一样，很多人都说他会做，可是真正做对的只有极少数人（我是其中之一）。这些技术源自于我对程序语言本质的理解，源自于 Dan Friedman, Kent Dybvig 和 Amr Sabry 等老师的教诲，也源自于我自己辛勤的实验，实验，再实验…… 在我简短而优雅的代码中，包含了许多人需要花费好几倍时间和代码长度才能达到的目标。所以虽然 Coverity 的工程师们技术实力很强，但在代码的简单程度和对程序语言语义的理解上，还真没有人是我的对手。
 
 这就是为什么我经常能够一眼就看出 Coverity 产品里存在的问题，并且很快的修正错误。举一个简单的例子，有一天我修改了一行代码，使得产品在某些 benchmark 上的内存使用量减少了一半。我为什么可以做到这一点呢？因为在我的 Python 分析器里，这个问题是从一开头就不存在的！Coverity 的代码里面有好些类似的 bug，都是我自己根本不可能犯的错误。我不是想贬低同事们的水平，他们有些是世界顶尖的高手，可是我也很清楚自己的技术地位。
 
