--- a/_posts/2013-06-17-work.md
+++ b/_posts/2013-06-17-work.md
@@ -6,7 +6,7 @@ title: 半年来的工作感受
 
 好久没有写博客，一方面因为工作太忙，另一方面是因为没有发现什么好写的。可是后来发现没什么好写的原因其实也是因为工作太忙了。忙得不正常，所以没有很多时间和精力来研究和欣赏自己喜欢的东西了。
 
-我在一家叫做 Coverity 的公司工作，我住在 San Francisco。Coverity 是一个奇怪的公司，San Francisco 是一个奇怪的城市。
+我在一家叫做 Coverity 的公司工作，我住在三藩市（San Francisco）。Coverity 是一个奇怪的公司，三藩市是一个奇怪的城市。
 
 Coverity 制造一种叫做“静态分析”（static analysis）的软件。这种软件可以在不运行程序的情况下，经过对代码的分析，自动的找到程序里面可能出现的问题。这有点像我之前给 Google 做的那个 Python 分析器，只不过针对另外的语言（C，C++ 和 Java 等），分析的侧重点不同，能处理代码的规模也貌似大一些。还有就是这么多年了，久经沙场考验了。
 
