--- a/_posts/2013-06-17-work.md
+++ b/_posts/2013-06-17-work.md
@@ -10,7 +10,7 @@ title: 半年来的工作感受
 
 Coverity 制造一种叫做“静态分析”（static analysis）的软件。这种软件可以在不运行程序的情况下，经过对代码的分析，自动的找到程序里面可能出现的问题。这有点像我之前给 Google 做的那个 Python 分析器，只不过针对另外的语言（C，C++ 和 Java 等），分析的侧重点不同，能处理代码的规模也貌似大一些。还有就是这么多年了，久经沙场考验了。
 
-Coverity 具有世界上最先进的一些技术，所以麻雀虽小，却让很多人离不开它。恐怕很少有人知道，这小小的公司的忠实客户，包括了一系列的大拿：美国宇航局, 波音, <a href="http://www.lockheedmartin.com">洛克希德马丁</a>，雷神（<a href="http://www.raytheon.com">Raytheon</a>），<a href="http://www.baesystems.com">BAE Systems</a>，丰田，欧洲原子能中心（CERN）…… 貌似几乎所有对代码质量不敢有丝毫差错，又不得不用像 C++ 这样毛病众多的语言的公司，都购买了 Coverity 的产品。比如最近的<a href="http://www.youtube.com/watch?v=8gOic_LD2u8">火星好奇者号</a>上的所有200多万行代码，都经过了 Coverity 的静态分析。当然，如此精密的设备不可能光靠 Coverity 查一下错就能确保万无一失，它必须依靠很多其它的技术，但 Coverity 确实是这些东西的开发过程里面比较重要的部分。
+Coverity 具有世界上最先进的一些技术，所以麻雀虽小，却让很多人离不开它。恐怕很少有人知道，这小小的公司的忠实客户，包括了一系列的大拿：美国宇航局, 波音, <a href="http://www.lockheedmartin.com">洛克希德马丁</a>，雷神（<a href="http://www.raytheon.com">Raytheon</a>，产品是<a href="http://www.youtube.com/watch?v=EHRvyaN9gjI">爱国者导弹</a>），<a href="http://www.baesystems.com">BAE Systems</a>，丰田，欧洲原子能中心（CERN）…… 貌似几乎所有对代码质量不敢有丝毫差错，又不得不用像 C++ 这样毛病众多的语言的公司，都购买了 Coverity 的产品。比如最近的<a href="http://www.youtube.com/watch?v=8gOic_LD2u8">火星好奇者号</a>上的所有200多万行代码，都经过了 Coverity 的静态分析。当然，如此精密的设备不可能光靠 Coverity 查一下错就能确保万无一失，它必须依靠很多其它的技术，但 Coverity 确实是这些东西的开发过程里面比较重要的部分。
 
 我必须承认，Coverity 给了我足够的<a href="http://www.yinwang.org/blog-cn/2013/04/12/inspiration">启发</a>，甚至间接的让我发现了自己之前做的 <a href="http://yinwang0.wordpress.com/2010/09/12/pysonar">Python 静态分析</a>里面存在的一些问题。Coverity 的产品在大规模的代码上面的成功，也让我意识到了自己在 Python 分析器里的一些突发奇想的设计的正确性和价值。如果我现在做一个新的 Python 分析器，它将比原来的精确和高效（也可以推广到其它语言比如 JavaScript）。我也清楚的看到，Coverity 自发研制的一些“不大严谨”的做法，其实比程序语言领域里面一些看似高深的“逻辑”还要“正确”。这些微妙的“提示信息”，让我把多个领域的知识串通了起来。所以我觉得跟这公司还有点臭味相投，加入 Coverity 也是不枉此行的。
 
