--- a/_posts/2013-06-21-move-on.md
+++ b/_posts/2013-06-21-move-on.md
@@ -9,9 +9,9 @@ title: 前进
 
 然而，每一个IT业的公司都有那么几个人，自持会玩一点某些语言的小把戏，就对同事缺乏基本的尊重。这才是我应该重点指出的问题。这些人虽然在大学受到了“训练”，但却没有受到“教育”。爱因斯坦说，所谓“教育”就是把学校学到的知识都忘掉之后，剩下来的东西。
 
-这就是我为什么喜欢抨击一些语言，因为它们总是助涨这种人的气焰。在我看来 C++ 是这里面的重灾区。很多 C++ 程序员不明白 C++ 的缺陷，滥用 C++ 的“特性”，喜欢耍一些<a href="http://www.yinwang.org/blog-cn/2013/03/15/language-design-mistake1">小聪明</a>，并且喜欢“教育”和嘲笑不会这些“特性”的人。
+这就是我为什么喜欢抨击一些语言，因为它们总是助涨这种人的气焰。在我看来 C++ 是这里面的重灾区。很多 C++ 程序员不明白 C++ 的缺陷，滥用 C++ 的“特性”，喜欢耍一些<a href="http://www.yinwang.org/blog-cn/2013/03/15/language-design-mistake1">小聪明</a>，并且喜欢“教育”和嘲笑不会这些“特性”的人
 
-可是真正的懂得程序语言的人，往往对它们的各种“小技巧”持怀疑态度，一般都避免使用特别“聪明”的做法。造诣越深的人越是谦虚，越是谦虚就越容易被这些人嘲笑。比如 <a href="http://www.yinwang.org/blog-cn/2012/07/04/dan-friedman"Dan Friedman</a> 就经常被人嘲笑。
+可是真正的懂得程序语言的人，往往对它们的各种“小技巧”持怀疑态度，一般都避免使用特别“聪明”的做法。造诣越深的人越是谦虚，越是谦虚就越容易被这些人嘲笑。比如 <a href="http://www.yinwang.org/blog-cn/2012/07/04/dan-friedman">Dan Friedman</a> 就经常被人嘲笑。
 
 如果其它的都鄙视这种自大狂的话，那这种公司还有可能值得工作，因为这种人会被慢慢的压制下去。然而，如果这种人的做法得到了高层的庇护和支持，那这个公司离失败就不远了，因为真正的高手不会为它工作。
 
