--- a/_posts/2013-06-21-move-on.md
+++ b/_posts/2013-06-21-move-on.md
@@ -13,10 +13,10 @@ title: 前进
 
 可是真正的懂得程序语言的人，往往对它们的各种“小技巧”持怀疑态度，一般都避免使用特别“聪明”的做法。造诣越深的人越是谦虚，越是谦虚就越容易被这些人嘲笑。比如 <a href="http://www.yinwang.org/blog-cn/2012/07/04/dan-friedman">Dan Friedman</a> 就经常被人嘲笑。
 
-如果其它的都鄙视这种自大狂的话，那这种公司还有可能值得工作，因为这种人会被慢慢的压制下去。然而，如果这种人的做法得到了高层的庇护和支持，那这个公司离失败就不远了，因为真正的高手不会为它工作。
+如果其它的人都鄙视这种自大狂的话，那这种公司还有可能值得为它工作，因为这种人会被慢慢的压制下去。然而，如果这种人的做法得到了高层的庇护和支持，那这个公司离失败就不远了，因为真正的高手不会为它工作。
 
-虽然我能够做出非常强大的静态分析，但这确实是一个吃力不讨好的行业。为了找出程序里面的问题，你必须几乎完整的实现这些程序所用语言的语义。这种实现必须完整的再现这种语言设计的错误和丑陋之处。久而久之，这些丑陋的东西就会印在你的心里，从而让你没法发现更加简单美好的东西。当你分析的东西不再流行，你就失去了辛辛苦苦得来的市场。真正的聪明人是创造新的东西的，而不是去给别人设计的东西找错。
+虽然我能够做出非常强大的静态分析，但这确实是一个吃力不讨好的行业。为了找出程序里面的问题，你必须几乎完整的实现这些程序所用语言的语义。这种实现必须完整的再现这种语言设计的错误和丑陋之处。久而久之，这些丑陋的东西就会印在你的心里，从而让你没法发现更加简单美好的东西。当你分析的语言不再流行，你就失去了辛辛苦苦得来的市场。真正的聪明人是创造新的东西的，而不是去给别人设计的蹩脚东西找错。
 
-所以我不打算继续做程序分析了，我要设计自己的语言。Coverity 的枯燥的工作和压抑的气氛，让我失去了大量的精力。空闲的时间都用来休息了，没有心情做自己的东西。现在是一个恢复的好时机。我最近参加了一些 <a href="http://www.meetup.com/SF-Scala">Scala</a> 和 <a href="http://www.meetup.com/The-Bay-Area-Clojure-User-Group">Clojure</a> 程序员的 “meetup”。我觉得里面有挺多开明而志同道合的人。虽然我明白它们的设计肯定还有改进之处，至少我看到了它们在朝着好的方向前进。
+所以我不打算继续做程序分析了，我要设计自己的语言。Coverity 的枯燥的工作和压抑的气氛，让我失去了大量的精力。空闲的时间都用来休息了，没有心情做自己的东西。现在是一个恢复的好时机。我最近参加了一些 <a href="http://www.meetup.com/SF-Scala">Scala</a> 和 <a href="http://www.meetup.com/The-Bay-Area-Clojure-User-Group">Clojure</a> 程序员的 “meetup”。我觉得里面有挺多开明而志同道合的人。虽然我明白它们的设计肯定还有需要改进之处，至少我看到了它们在朝着好的方向前进。我愿意帮助他们。
 
 困难的问题经常是不需要解决的。它们的困难往往是由于早期的设计失误。如果我们改变了这些设计，很多问题就根本不存在了。我希望有一天每一个人都能轻松地写出好的程序。
