--- a/_posts/2013-06-21-move-on.md
+++ b/_posts/2013-06-21-move-on.md
@@ -5,7 +5,7 @@ title: 前进
 
 有人来信问我为什么把之前那两篇文章删了，问我是不是因为有人抨击我。实际上我根本不会因为别人的抨击而删掉文章的。我也不会在意任何人的抨击。我删掉它们往往意味着我自己觉得那文章没有意义，或者言语混淆。
 
-说实话，经过一段时间的面试和了解，我觉得这样的公司真的不是个别特例，但这并不说明我们应该忍受它们。一个不尊重员工的公司，是绝对不值得为它工作的。正是因为这种能忍耐的人，才造成了它们的气焰嚣张和泛滥。虽然处理工程问题的方式有很大差别，但是我绝不会因为自己水平比别人高就瞧不起人。实际上，我的水平显然大大的高于 Coverity 的任何 Principle Engineer 和 Architect，但我跟他们相处都比较友好，我愿意帮助他们，因为我们都坐在同一条船上。
+说实话，经过一段时间的面试和了解，我觉得这样的公司真的不是个别特例，但这并不说明我们应该忍受它们。一个不尊重员工的公司，是绝对不值得为它工作的。正是因为这种能忍耐的人，才造成了它们的气焰嚣张和泛滥。虽然处理工程问题的方式有很大差别，但是我绝不会因为自己水平比别人高就瞧不起人。实际上，我的水平显然在某种程度上高于 Coverity 的几乎所有 Principle Engineer 和 Architect，但我跟他们相处都比较友好。我愿意帮助他们，他们也愿意帮助我，因为我们都坐在同一条船上。
 
 然而，每一个IT业的公司都有那么几个人，自持会玩一点某些语言的小把戏，就对同事缺乏基本的尊重。这才是我应该重点指出的问题。这些人虽然在大学受到了“训练”，但却没有受到“教育”。爱因斯坦说，所谓“教育”就是把学校学到的知识都忘掉之后，剩下来的东西。
 
@@ -17,6 +17,6 @@ title: 前进
 
 虽然我能够做出非常强大的静态分析，但这确实是一个吃力不讨好的行业。为了找出程序里面的问题，你必须几乎完整的实现这些程序所用语言的语义。这种实现必须完整的再现这种语言设计的错误和丑陋之处。久而久之，这些丑陋的东西就会印在你的心里，从而让你没法发现更加简单美好的东西。当你分析的语言不再流行，你就失去了辛辛苦苦得来的市场。
 
-困难的问题经常是不需要解决的。它们的困难往往是由于早期的设计失误。如果我们改变了这些设计，很多问题就根本不存在了。所以真正的聪明人应该改造和发明新的设计，而不是去给别人设计的蹩脚东西找错。所以我不打算继续做程序分析了，我要设计自己的语言。Coverity 的枯燥的工作和压抑的气氛，让我失去了大量的精力。空闲的时间都用来休息了，没有心情做自己的东西。现在是一个恢复的好时机。
+困难的问题经常是不需要解决的。它们的困难往往是由于早期的设计失误。如果我们改变了这些设计，很多问题就根本不存在了。所以真正的聪明人应该改造和发明新的设计，而不是去给别人设计的蹩脚东西找错。所以我不打算继续做程序分析了，我要设计自己的语言。Coverity 枯燥的工作和压抑的气氛，让我失去了大量的精力。空闲的时间都用来休息了，没有心情做自己的东西。现在是一个恢复的好时机。
 
 我最近参加了一些 <a href="http://www.meetup.com/SF-Scala">Scala</a> 和 <a href="http://www.meetup.com/The-Bay-Area-Clojure-User-Group">Clojure</a> 程序员的“meetup”。我觉得里面有挺多开明而志同道合的人。虽然我明白它们的设计肯定还有需要改进之处，至少我看到了它们在朝着好的方向前进。我愿意帮助他们。
