--- a/_posts/2013-06-21-move-on.md
+++ b/_posts/2013-06-21-move-on.md
@@ -5,7 +5,7 @@ title: 前进
 
 有人来信问我为什么把之前那两篇文章删了，问我是不是因为有人抨击我。实际上我根本不会因为别人的抨击而删掉文章的。我也不会在意任何人的抨击。我删掉它们往往意味着我自己觉得那文章没有意义，或者言语混淆。
 
-说实话，经过一段时间的面试和了解，我觉得这样的公司真的不是个别特例，但这并不说明我们应该忍受它们。一个不尊重员工的公司，是绝对不值得为它工作的。正是因为这种能忍耐的人，才造成了它们的气焰嚣张和泛滥。虽然处理工程问题的方式有很大差别，但是我绝不会因为自己水平比别人高就瞧不起人。实际上，我的水平显然在某种程度上高于 Coverity 的几乎所有 Principle Engineer 和 Architect，但我跟他们相处都比较友好。我愿意帮助他们，他们也愿意帮助我，因为我们都坐在同一条船上。
+说实话，经过一段时间的面试和了解，我觉得这样的公司真的不是个别特例，但这并不说明我们应该忍受它们。一个不尊重员工的公司，是绝对不值得为它工作的。正是因为这种能忍耐的人，才造成了它们的气焰嚣张和泛滥。虽然处理工程问题的方式有很大差别，但是我绝不会因为自己水平比别人高就瞧不起人。实际上，我的水平显然高于 Coverity 的几乎所有 Principle Engineer 和 Architect，但我跟他们相处都比较友好。我愿意帮助他们，他们也愿意帮助我，因为我们都坐在同一条船上。
 
 然而，似乎每一个IT业的公司都有那么几个人，自持会玩一点某些语言的小把戏，就对同事缺乏基本的尊重。这才是我应该重点指出的问题。这些人虽然在大学受到了“训练”（training），但却没有受到“教育”（education）。爱因斯坦说，所谓“教育”就是把学校学到的知识都忘掉之后，剩下来的东西。
 
