--- a/_posts/2013-06-22-one-lang.md
+++ b/_posts/2013-06-22-one-lang.md
@@ -214,15 +214,17 @@ One 语言可以极其简单的实现并行计算，这与 C# 的 async/wait 有
     (do-other-things)
     (foo (wait y))
 
-这里的 par 表示：(long-computation) 就会被自动安排为异步执行。
+这里的 par 表示：(long-computation) 应该被自动安排为异步执行。
 
-第二行的 y 能够直接得到 x 的“可能还没计算的值”。由于还没有人使用 y 的值，我们并不需要检查 (long-computation) 是否已经执行完毕。所以 (: y x) 和 (do-other-things) 可以毫无停顿的进行。这样 (long-computation) 就和 (: y x) ... (do-other-things) 成为了两个独立的“线程”。
+第二行的 y 能够直接得到 x 的“可能还没计算的值”（在 C# 里面叫做 Task）。由于还没有人使用 y 的值，我们并不需要检查 (long-computation) 是否已经执行完毕。所以 (: y x) 和 (do-other-things) 可以毫无停顿的进行。这样 (long-computation) 就和 (: y x) ... (do-other-things) 成为了两个独立的“线程”。
 
-直到必须使用 y 的值，我们才用 wait 去检查“y 计算出来了吗？”，因为 y 其实就是 x，随之引起连锁的问题：“x 计算出来了吗？”如果 x 还没计算完毕，那么就会等待它计算完才会调用 foo。
+直到必须使用 y 的值，我们才用 wait 去检查“y 计算出来了吗？”，因为 y 其实就是 x，所以这其实是在问：“x 计算出来了吗？”如果 x 还没计算完毕，那么就会等待它计算完才会调用 foo。
 
-为什么 par 和 wait 需要显式声明，而不能对程序员透明呢？这是来源于现实系统的限制。我们不能让编译器自动的插入 par 来并行执行某段代码，因为我们不知道 (long-computation) 到底会计算多久。也许它只是一个简单的加法呢？如果我们把这么微小的操作分配给另一个处理器，我们就增加了处理器间通信的开销。然而要想知道一段代码的运行时间，却是一个不可计算的问题。所以我们不得以，必须要求程序员来指定那段代码运行时间足够长，值得进行并行计算。
+为什么 par 和 wait 需要显式声明，而不能对程序员透明呢？这是来源于现实系统的限制。我们不能让编译器自动的插入 par 来并行执行某段代码，因为我们不知道 (long-computation) 到底会计算多久。也许它只是一个简单的加法呢？如果我们把这么微小的操作分配给另一个处理器，我们就增加了处理器间通信的开销。然而要想知道一段代码的运行时间，却是一个不可计算的问题。所以我们不得以，必须要求程序员来指定哪段代码运行时间足够长，值得进行并行计算。
 
-那么为什么要使用 wait，而不能直接调用 (foo y) 呢？因为问像“x 执行完了吗”这样的问题是需要时间的。任何地方的 par 语句都可能产生“还没计算完的值”，它们会“流”到代码的任意位置。如果我们不能准确的定位它们可能出现的位置，我们就必须在使用每个变量之前问这个问题：“你计算出来了吗？”反复的问，这样就带来了程序效率的大幅度降低。这与我之前谈到的“<a href="http://www.yinwang.org/blog-cn/2013/04/01/lazy-evaluation">惰性求值</a>”的缺点类似。然而，想要基本准确的定位这些 wait 的位置，需要全局流分析，这在要求速度很快，或者需要模块化的编译器里是不大可行的。
+那么为什么要使用 wait，而不能直接调用 (foo y) 呢？因为问像“x 执行完了吗”这样的问题是需要时间的。虽然时间很短，但是反复的问就积少成多了。任何地方的 par 语句都可能产生“还没计算完的值”，它们可能会随着“数据流”到达代码的任意位置。如果我们不能准确的定位它们可能出现的位置，我们就必须在使用每个变量之前问这个问题：“你计算出来了吗？”这样就带来了程序效率的大幅度降低。这与我之前谈到的“<a href="http://www.yinwang.org/blog-cn/2013/04/01/lazy-evaluation">惰性求值</a>”的缺点类似。然而，想要定位这些确实需要 wait 的位置，就需要全局的数据流分析。这在要求速度很快，或者需要模块化的编译器里是不大可行的。
+
+由于 One 语言写出来的所有函数和表达式都有可能成为 Neo 操作系统的一个“线程”，当已有的线程仍然在运行的时候，我们有可能写出新的代码，编译然后执行。所以模块化的编译似乎是一个必须的东西。也就是说，进行全局数据流分析貌似开销太大，因为这种流分析可能需要分析系统里正在运行的所有进程的所有代码。
 
 
 以上就是我能想到的 One 语言里比较有特色的地方。具体的设计和实现，还有待多方面的调查和讨论才能最后决定。关于 Neo 操作系统的设计，可以参考我以前的一篇<a href="http://www.yinwang.org/blog-cn/2013/04/14/os-design">博文</a>。
