--- a/_posts/2013-06-22-one-lang.md
+++ b/_posts/2013-06-22-one-lang.md
@@ -24,7 +24,7 @@ title: “One语言”的设计理念
 
 很多人从自然语言的现状出发，觉得世界上需要多种程序语言。然而圣经的故事告诉我们，在最早的时候全世界只有一种语言。但是由于全部人都用这种语言，信息交互非常迅速，人类发展很快。上帝开始担心人会超越自己，所以就施了一个法术，让不同地方的人开始说不同的语言。这样人们由于信息交互不流畅，发展就减慢了。当然圣经只是一本故事书，但这貌似仍然说明了一些问题。
 
-从认知科学的角度来看，人类其实根本不是用自然语言思考的，不管是中文还是英语，法语…… 不同国家的人在思考的时候，脑子里其实运行的是同一种没有名字的“人脑语言”。他们需要交流的时候，才会把这些模型转换为自然语言。这种“人脑语言”构造出现实世界的一个“模型”（model）。人脑通过对这种模型进行“模拟”，从而能够预见短暂的未来，对将要发生的事情提前做好安排。程序语言其实就跟人脑里面的这种语言类似，它也是一种用于构造“模型”的材料，这种模型不是由人脑，而是由电脑来模拟运行。这就是为什么我们能用电脑来预报天气。
+从认知科学的角度来看，人类其实根本不是用自然语言思考的，不管是中文还是英语，法语…… 不同国家的人在思考的时候，脑子里其实运行的是同一种没有名字的“人脑语言”。来自感官的信号，和神经元之间的电化学反应，在人脑里面形成了一种动态的“电路”和“模型”。人脑就是使用这些电路来推动这些模型，从而预测出将来会发生的事情。他们需要交流的时候，才会把这些模型转换为自然语言。程序语言其实就跟人脑里面的这种语言类似，它也是一种用于构造“模型”的材料，只不过这种模型不是由人脑，而是由电脑来运行。这就是为什么我们能用电脑来预报天气。
 
 从物理的角度来看，我们生活的世界本来就是由非常简单的材料——基本粒子构成的。我们看到的千奇百怪的物体，不过都是这些基本粒子经过不同的组合方式放在一起而已。所以有什么理由认为我们需要很多种程序语言呢？
 
