--- a/_posts/2013-06-22-one-lang.md
+++ b/_posts/2013-06-22-one-lang.md
@@ -115,7 +115,7 @@ GC 的问题就是为什么 C++ 继续流行的原因。我觉得与其解决这
 
     (<= node.next ls.head)
 
-这样的赋值语句虽然会降低 node.next 的引用计数，但却不会对 ls.head 的引用计数产生影响，所以产生一个 weak pointer。
+这样的赋值语句虽然会降低 node.next 的引用计数，但却不会对 ls.head 的引用计数产生影响，所以产生一个 weak pointer。如果他不小心写成了普通的赋值语句怎么办呢？那就在系统里留下一些垃圾。所以恐怕也需要结合一下基于 arena 的方式，就像 Unix 一样，把结束之后的进程占用的内存完全释放掉。
 
 根据我跟一个编译器工程师的讨论，Objective-C 的自动引用计数（ARC）是相当高效的，然而 这种自动引用计数方法是否能满足实时系统要求，还有待实践考验。也许有一天我会再次考虑使用 GC 或者其他方式，但它应该只需要程序员做非常少的工作。
 
