--- a/_posts/2013-06-22-one-lang.md
+++ b/_posts/2013-06-22-one-lang.md
@@ -124,7 +124,7 @@ GC 的问题就是为什么 C++ 继续流行的原因。我觉得与其解决这
 
 <a href="http://www.itu.dk/~sestoft/pebook/pebook.html">Partial Evaluation</a> 是 Neil Jones 在 80 年代提出的一种自动生成编译器的方法。在 Chez Scheme 里面有一个优化过程叫做 CP0，是一个 online partial evaluation。在 Kent 的另一个课程，我们实现了 CP0 的算法。
 
-这种 online partial evaluation，可以一步就完成其它编译器里面的很多种优化，比如 constant folding, copy propagation 等。它也可以被作为很多要素的实现方式。以外，它还可以用于优化掉多余的动态类型检查。这样我就从中得到了一种可以实现动静态类型检查“自动划分”的方法。
+这种 online partial evaluation，可以一步就完成其它编译器里面的很多种优化，比如 constant folding, copy propagation 等。它也可以被作为很多要素的实现方式，比如用于优化掉多余的动态类型检查。这样我就从中得到了一种可以实现动静态类型检查“自动划分”的方法。
 
 再加上从静态分析领域得到的启发，我就得到了以下的类型系统。这个类型系统，也就是 One 语言不同于所有其他语言的特色。
 
