--- a/_posts/2013-06-22-one-lang.md
+++ b/_posts/2013-06-22-one-lang.md
@@ -28,6 +28,8 @@ title: “One语言”的设计理念
 
 从物理的角度来看，我们生活的世界本来就是由非常简单的材料——基本粒子构成的。我们看到的千奇百怪的物体，不过都是这些基本粒子经过不同的组合方式放在一起而已。所以有什么理由认为我们需要很多种程序语言呢？
 
+从历史来看，已经有这样的系统存在过：Lisp Machine, <a href="http://www.yinwang.org/blog-cn/2013/03/07/oberon">Oberon</a>。
+
 所以，我觉得世界上根本不需要那么多种程序语言。理想的情况是一种就够了。
 
 
