--- a/_posts/2013-06-22-one-lang.md
+++ b/_posts/2013-06-22-one-lang.md
@@ -19,7 +19,7 @@ title: “One语言”的设计理念
 
 从认知科学的角度来看，人类其实根本不是用自然语言思考的，不管是中文还是英语，法语…… 不同国家的人在思考的时候，脑子里其实运行的是同一种没有名字的“人脑语言”。来自感官的信号，和神经元之间的电化学反应，在人脑里面形成了一种动态的“电路”和“模型”。人脑就是使用这些电路来推动这些模型，从而预测出将来会发生的事情。他们需要交流的时候，才会把这些模型转换为自然语言。程序语言其实就跟人脑里面的这种语言类似，它也是一种用于构造“模型”的材料，只不过这种模型不是由人脑，而是由电脑来运行。这就是为什么我们能用电脑来预报天气。
 
-从物理的角度来看，我们生活的世界本来就是由非常简单的材料——基本粒子构成的。我们看到的千奇百怪的物体，不过都是这些基本粒子经过不同的组合方式放在一起而已。所以有什么理由认为我们需要很多种程序语言呢？
+从物理的角度来看，我们生活的世界本来就是由非常简单的材料——基本粒子构成的。我们看到的千奇百怪的物体，不过都是这些基本粒子经过不同的方式组合在一起而已。所以有什么理由认为我们需要很多种程序语言呢？
 
 从历史来看，已经有这样的系统存在过：Lisp Machine, <a href="http://www.yinwang.org/blog-cn/2013/03/07/oberon">Oberon</a>。
 
