--- a/_posts/2013-06-22-one-lang.md
+++ b/_posts/2013-06-22-one-lang.md
@@ -28,7 +28,7 @@ title: “One语言”的设计理念
 
 ### One语言的基本要素
 
-One语言的设计融合了很多种语言的因素和一些新的想法。它并不是简单的把它们放在一起，而是从哲学的角度出发，让这些要素天衣无缝的组合在一起。需要描述的每一个模型，都有一个最直接，最高效的描述方式，而不需要转几道弯，绕过一堆语言设计的无端限制来完成。
+One语言的设计融合了很多种语言的因素和一些新的想法。它并不是简单的把它们放在一起，而是从哲学的角度出发，让这些要素无缝的组合在一起。需要描述的每一个模型，都有一个最直接，最高效的描述方式，而不需要转几道弯，绕过一堆语言设计的无端限制来完成。
 
 我现在就介绍一下几个最主要的要素。偏向于某些语言的人也许会对我的选择比较吃惊，但是我会对这些选择做出简要的分析，说明我的理由，或者给出之前的一些博文的链接。
 
