--- a/_posts/2013-06-22-one-lang.md
+++ b/_posts/2013-06-22-one-lang.md
@@ -240,4 +240,4 @@ One 语言可以比较简单的实现并行计算，这与 C# 的 async/wait 有
 由于 One 语言写出来的所有函数和表达式都有可能成为 Neo 操作系统的一个“线程”，当已有的线程仍然在运行的时候，我们有可能写出新的代码，编译然后执行。所以模块化的编译似乎是一个必须的东西。也就是说，进行全局数据流分析貌似开销太大，因为这种流分析可能需要分析系统里正在运行的所有进程的所有代码。
 
 
-以上就是我能想到的 One 语言里比较有特色的地方。具体的设计和实现，还有待多方面的调查和讨论才能最后决定。关于 Neo 操作系统的设计，可以参考我以前的一篇<a href="http://www.yinwang.org/blog-cn/2013/04/14/os-design">博文</a>。
+以上就是我能想到的 One 语言里比较有特色的地方。具体的设计和实现，还有待多方面的调查和讨论才能最后决定。关于 Neo 操作系统的设计，可以参考我以前的一篇<a href="http://www.yinwang.org/blog-cn/2013/04/14/os-design">博文</a>。当然，虽然我搞定语言的类型系统和编译器没问题，运行时系统（操作系统）的设计，我肯定需要更有经验的人帮忙。所以欢迎大家跟我切磋。
