--- a/_posts/2013-06-22-one-lang.md
+++ b/_posts/2013-06-22-one-lang.md
@@ -8,7 +8,9 @@ title: “One语言”的设计理念
 
 其实我一直在设计一种语言。从进入 Cornell 之后，我就在搜集各种资料信息，想设计一种“终极语言”，它会使得编程变得极其简单。因为大家都用这同一种语言，所以不管是人还是程序间的信息交换都会变得非常容易。软件的构造效率会大幅度提高。
 
-我把这种语言暂时称为 One。如果写一本书，就应该叫：The One Programming Language。THE ONE — 让我想起了骇客帝国的 Neo…… 也许可以把用这个语言写出来的操作系统叫做 Neo。一种用于取代 Unix 的操作系统，就是我的下一个目标。实际上这个操作系统，就是 One 语言的“运行时系统”（runtime）。
+虽然离“终极”的目标还差一截，但是我还是把这种语言暂时称为 One。如果写一本书，就应该叫：The One Programming Language。THE ONE — 让我想起了骇客帝国的 Neo 哈哈…… 也许可以把用这个语言写出来的操作系统叫做 Neo。一种用于取代 Unix 的操作系统，就是我的下一个目标。实际上这个操作系统就是 One 语言的“运行时系统”（runtime）。
+
+（现在发现 One 这个名字不好。Neo 可以考虑。不过只是个名字，以后换换就行。）
 
 
 ### 为什么我们只需要一种程序语言
