--- a/_posts/2013-07-13-weibo.md
+++ b/_posts/2013-07-13-weibo.md
@@ -5,11 +5,11 @@ title: 为什么停用微博
 
 我已经反反复复的启用和停用微博好几次了。每一次的启用，都是出自良好的初衷，然而每一次都是以失望而结束。再一次的启用，往往是因为忘记了停用时的心情。不过我想现在是该永久的停用微博的时候了，并且记住我为什么停用它。
 
-我想微博给我的心理带来的矛盾，是由这类“社会媒体”的本质决定的。微博或者 Facebook 这类社会媒体总是鼓吹“分享”这一做法，然而我们真的应该在这些地方分享自己的言论和照片吗？这样的分享，其实只会让自己喜爱的东西贬值。
+我想微博给我的心理带来的矛盾，是由这类“社会媒体”的本质决定的。微博或者 Facebook 这类社会媒体总是鼓吹“分享”这一做法，然而我们真的应该在这些地方分享自己的言论和照片吗？这样的分享，其实只会让自己和自己喜爱的东西贬值。
 
 最深刻的思想，只有跟愿意理解它的人交流，才会得到响应和欣赏。最真的心情，需要跟最亲密的朋友分享，才会得到良好的回应。然而，隔着网络的面纱，这一切都变得难以控制了。你的分享，让某些人不齿；你的快乐，让某些人嫉妒得要死。
 
-在 Internet 很早期的时候就有人说过：“在互联网上没有人知道你是一条狗。”这一点在 FB 和微博流行的今天也丝毫没有变化。FB 上的“朋友”一词，基本上没有任何意义。而微博上的“粉丝”，却经常有相反的含义。
+在 Internet 很早期的时候就有人说过：“在互联网上没有人知道你是一条狗。”这一点在 FB 和微博流行的今天也丝毫没有变化。FB 上的“朋友”一词，基本上没有任何意义。而微博上的“粉丝”，却经常有相反的含义。FB 还需要“验证”才能成为“朋友”，而微博什么验证都不需要就可以“关注”。这正好验证了一句话，越容易得来的东西越没有价值，甚至价值为负数。
 
 网络上貌似有很多心理变态的人，越是让他瞧不起的人，越是不开心的话题，越是让他们“关注”和兴奋。仿佛他们来到这个世界上，就是为了寻找那些东西。在很早的时候我就已经知道 MITBBS 和 #Java IRC 聊天室，这些地方基本上都是暴民。每一次上去讨论，几乎没有一次不是扫兴而归。能够把你看成是白痴，是他们最开心的事情。“去看了 API 文档再来问问题！”这就是他们最爱说的话。
 
