--- a/_posts/2013-07-13-weibo.md
+++ b/_posts/2013-07-13-weibo.md
@@ -15,4 +15,4 @@ title: 为什么停用微博
 
 我可以避免它们，我可以不去 MITBBS，不上 #Java 聊天室，然而我却无法让这类人不“关注”我的微博。短短的一句话里面，就可以有好几个带有“暴力”的词汇。这些词汇足以把任何理性的，技术性的讨论转化为一次宗教冲突。
 
-我无法控制这样的人的言论，我也无法防止他们“关注”我的微博，所以我只好不再使用微博。只有关闭这种不良的信息通道，才能让我专注于最好的想法和最好的心情。这也许就是为什么 Knuth 不再使用 email 的原因吧。实际上我最好的几个朋友，几乎全都不用微博和 FB 的。所以如果你想知道我真实的见解，那就只好静静的等待我更新这个没有评论功能的博客。
+我无法控制这样的人的言论，我也无法防止他们“关注”我的微博，所以我只好不再使用微博。只有关闭这种不良的信息通道，才能让我专注于最好的想法和心情。这也许就是为什么 Knuth 不再使用 email 的原因吧。实际上我最好的几个朋友，几乎全都不用微博和 FB 的。所以如果你想知道我真实的见解，那就只好静静的等待我更新这个没有评论功能的博客。
