--- a/_posts/2013-07-13-weibo.md
+++ b/_posts/2013-07-13-weibo.md
@@ -7,11 +7,11 @@ title: 为什么停用微博
 
 我想微博给我的心理带来的矛盾，是由这类“社会媒体”的本质决定的。微博或者 Facebook 这类社会媒体总是鼓吹“分享”这一做法，然而我们真的应该在这些地方分享自己的言论和照片吗？这样的分享，其实只会让自己和自己喜爱的东西贬值。
 
-最深刻的思想，只有跟愿意理解它的人交流，才会得到响应和欣赏。最真的心情，需要跟最亲密的朋友分享，才会得到良好的回应。然而，隔着网络的面纱，这一切都变得难以控制了。你的分享，让某些人不齿；你的快乐，让某些人嫉妒得要死。
+最深刻的思想，只有跟愿意理解它的人交流，才会得到响应和欣赏。最真的心情，需要跟最亲密的朋友分享，才会得到良好的回应。然而，隔着网络的面纱，这一切都变得难以控制了。你的分享，让某些人不齿；你的快乐，让某些人嫉妒得要死。我不需要别人的膜拜，也不需要别人的赞同。没有理解的赞同，跟没有理解的批评一样没有价值。
 
 在 Internet 很早期的时候就有人说过：“在互联网上没有人知道你是一条狗。”这一点在 FB 和微博流行的今天也丝毫没有变化。FB 上的“朋友”一词，基本上没有任何意义。而微博上的“粉丝”，却经常有相反的含义。FB 还需要“验证”才能成为“朋友”，而微博什么验证都不需要就可以“关注”。这正好验证了一句话，越容易得来的东西越没有价值，甚至价值为负数。
 
-网络上貌似有很多心理变态的人，越是让他瞧不起的人，越是不开心的话题，越是让他们“关注”和兴奋。仿佛他们来到这个世界上，就是为了寻找那些东西。在很早的时候我就已经知道 MITBBS 和 #Java IRC 聊天室，这些地方基本上都是暴民。每一次上去讨论，几乎没有一次不是扫兴而归。能够把你看成是白痴，是他们最开心的事情。“去看了 API 文档再来问问题！”这就是他们最爱说的话。
+网络上貌似有很多心理变态的人，越是让他瞧不起的人，越是不开心的话题，越是让他们“关注”和兴奋。仿佛他们来到这个世界上，就是为了寻找那些东西。在很早的时候，我有时候还去 MITBBS 或者 #Java IRC 聊天室。后来发现每一次上去讨论，几乎没有一次不是扫兴而归。能够把问问题的人看成是白痴，是他们最开心的事情。“去看了文档再来问问题！”这就是他们最爱说的话。然而他们没有想到的是，我问的那些东西的目的，往往是为了理解某种语言的设计失误之处。这种专家级的问题并不是看看文档就可以解决的。
 
 我可以避免它们，我可以不去 MITBBS，不上 #Java 聊天室，然而我却无法让这类人不“关注”我的微博。短短的一句话里面，就可以有好几个带有“暴力”的词汇。这些词汇足以把任何理性的，技术性的讨论转化为一次宗教冲突。
 
