--- a/_posts/2013-07-13-weibo.md
+++ b/_posts/2013-07-13-weibo.md
@@ -3,16 +3,16 @@ layout: default
 title: 为什么停用微博
 ---
 
-我已经反反复复的启用和停用微博好几次了。每一次的启用，都是出自良好的初衷，然而每一次都是以失望而结束。再一次的启用，往往是因为忘记了停用时的心情。不过我想现在是该永久的停用微博的时候了，并且记住我为什么停用它。
+我已经反反复复的启用和停用微博好几次了。每一次的启用，都是出自良好的初衷，然而每一次都是以失望而结束。再一次的启用，往往是因为忘记了停用时的心情。不过我想现在是该永久的停用微博的时候了，并且记住我为什么停用它。这里需要声明的是，停用微博的原因其实跟一些学术问题的正确与否毫无关系，然而却与讨论学术问题的时候采用的词汇和语气很有关系。
 
-我想微博给我的心理带来的矛盾，是由这类“社会媒体”的本质决定的。微博或者 Facebook 这类社会媒体总是鼓吹“分享”这一做法，然而我们真的应该在这些地方分享自己的言论和照片吗？这样的分享，其实只会让自己和自己喜爱的东西贬值。
+我想微博给我带来的心理矛盾，是由这类“社会媒体”的本质决定的。微博或者 Facebook 这类社会媒体总是鼓吹“分享”这一做法，然而我们真的应该在这些地方分享自己的言论和照片吗？这样的分享，其实只会让自己和自己喜爱的东西贬值。
 
-最深刻的思想，只有跟愿意理解它的人交流，才会得到响应和欣赏。最真的心情，需要跟最亲密的朋友分享，才会得到良好的回应。然而，隔着网络的面纱，这一切都变得难以控制了。你的分享，让某些人不齿；你的快乐，让某些人嫉妒得要死。我不需要别人的膜拜，也不需要别人的赞同。没有理解的赞同，跟没有理解的批评一样没有价值。
+最深刻的思想，只有跟愿意去理解它的人交流才会得到响应和欣赏。最真的心情，需要跟最亲密的朋友分享，才会得到良好的回应。然而，隔着网络的面纱，这一切都变得难以控制了。你的分享，让某些人不齿；你的快乐，让某些人嫉妒得要死。我不需要别人的膜拜，也不需要别人的赞同。没有理解的赞同，跟没有理解的批评一样没有价值。
 
 在 Internet 很早期的时候就有人说过：“在互联网上没有人知道你是一条狗。”这一点在 FB 和微博流行的今天也丝毫没有变化。FB 上的“朋友”一词，基本上没有任何意义。而微博上的“粉丝”，却经常有相反的含义。FB 还需要“验证”才能成为“朋友”，而微博什么验证都不需要就可以“关注”。这正好验证了一句话，越容易得来的东西越没有价值，甚至价值为负数。
 
-网络上貌似有很多心理变态的人，越是让他瞧不起的人，越是不开心的话题，越是让他们“关注”和兴奋。仿佛他们来到这个世界上，就是为了寻找那些东西。在很早的时候，我有时候还去 MITBBS 或者 #Java IRC 聊天室。后来发现每一次上去讨论，几乎没有一次不是扫兴而归。能够把问问题的人看成是白痴，是他们最开心的事情。“去看了文档再来问问题！”这就是他们最爱说的话。然而他们没有想到的是，我问的那些东西的目的，往往是为了理解某种语言的设计失误之处。这种专家级的问题并不是看看文档就可以解决的。
+网络上貌似有很多心理变态的人，越是让他瞧不起的人，越是不开心的话题，越是让他们“关注”和兴奋。仿佛他们来到这个世界上就是为了寻找那些东西。在很早的时候，我偶尔还去 MITBBS 或者 #Java IRC 聊天室。后来发现每一次上去讨论，几乎没有一次不是扫兴而归。能够把问问题的人看成是白痴，是他们最开心的事情。“去看了文档再来问问题！”这就是他们喜欢说的话。他们没有想到的是，我问的那些东西的目的，往往是为了了解某些语言的设计给程序员带来了怎样的麻烦。然而当我希望深入了解的时候，显然每次都被当成菜鸟：“这点规则都记不住！”能够成为一种语言的“熟练工”，能够记住如何绕过它所有的设计错误，显然是让他们非常自豪的事情。
 
-我可以避免它们，我可以不去 MITBBS，不上 #Java 聊天室，然而我却无法让这类人不“关注”我的微博。短短的一句话里面，就可以有好几个带有“暴力”的词汇。这些词汇足以把任何理性的，技术性的讨论转化为一次宗教冲突。
+我可以避免这种无意义的讨论，我可以不去 MITBBS，不上 #Java 聊天室，然而我却无法让这类人不“关注”我的微博。短短的一句话里面，就可以有好几个带有“暴力”的词汇。这些词汇足以把任何理性的，技术性的讨论转化为一次宗教冲突。
 
 我无法控制这样的人的言论，我也无法防止他们“关注”我的微博，所以我只好不再使用微博。只有关闭这种不良的信息通道，才能让我专注于最好的想法和心情。这也许就是为什么 Knuth 不再使用 email 的原因吧。实际上我最好的几个朋友，几乎全都不用微博和 FB 的。所以如果你想知道我真实的见解，那就只好静静的等待我更新这个没有评论功能的博客。
