--- a/_posts/2013-07-17-phd-grind.md
+++ b/_posts/2013-07-17-phd-grind.md
@@ -1,6 +1,6 @@
 ---
 layout: default
-title: 读《PhD Grind》
+title: 读《PhD Grind》有感
 ---
 
 记得一年前正在准备离开 IU 的时候，有人介绍给我 Philip Guo 的这本小书《<a href="http://pgbovine.net/PhD-memoir.htm">PhD Grind</a>》（下文简称PG），讲述他自己为 PhD 奋斗的故事。当时我没有仔细看。前几天跟一个朋友谈起 Coverity，他再次的跟我提起这本书，我才发现 Philip 在斯坦福的导师正是 Coverity 的创始人之一 Dawson Engler 教授。Coverity 主要的技术就是由 Dawson 和他的学生 Andy Chou 的一篇 OSDI 论文发展而成的。而 Philip 在 Dawson 手下做的第一个项目就是 Klee，一个跟 Coverity 具有类似性质的东西。
